--- a/src/main/java/org/olat/course/config/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/config/ui/_i18n/LocalStrings_zh_CN.properties
@@ -5,7 +5,7 @@ chkbx.glossary.explain=\u672f\u8bed\u8868\u9700\u8981\u5728\u201c\u9009\u9879\u2
 details.options.title=\u8bcd\u6c47\u8868\u548c\u8d44\u6e90\u6587\u4ef6\u5939
 tab.layout.title=\u5e03\u5c40
 chkbx.breadcrumb.onoff=\u9762\u5305\u74e4\u5bfc\u822a
-
+chkbx.glossary.onoff=\u672f\u8bed
 
 
 chkbx.calendar.onoff=\u5728\u5b66\u7a0b\u5de5\u5177\u7bb1\u4e2d\u663e\u793a\u65e5\u5386
