--- a/src/main/java/org/olat/course/run/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/run/_i18n/LocalStrings_zh_CN.properties
@@ -1,42 +1,56 @@
 #Wed Aug 25 10:35:09 CEST 2010
-command.bookmark=\u8BBE\u7F6E\u4E66\u7B7E
-command.calendar=\u65E5\u7A0B\u8868
-command.close=\u5173\u95ED\u8BFE\u7A0B
-command.close.courseconfig=\u5173\u95ED\u8BBE\u7F6E
-command.coursechat=\u8BFE\u5802\u8BA8\u8BBA
-command.courseconfig=\u8BE6\u7EC6\u9875\u9762
-command.coursefolder=\u5B58\u50A8\u5939 
-command.efficiencystatement=\u6210\u7EE9\u5355
-command.glossary=\u8BCD\u5178
-command.glossary.off=\u5173\u95ED
-command.glossary.off.alt=\u4ECE\u5B66\u4E60\u5185\u5BB9\u4E2D\u9690\u85CF\u672F\u8BED\u8BCD\u6C47\u8868
-command.glossary.on=\u5F00\u542F
-command.glossary.on.alt=\u5728\u5B66\u4E60\u5185\u5BB9\u4E2D\u663E\u793A\u672F\u8BED\u8BCD\u6C47\u8868
-command.openarchiver=\u5B58\u6863\u5DE5\u5177
-command.openassessment=\u8BC4\u4F30\u5DE5\u5177
-command.openeditor=\u5B66\u7A0B\u7F16\u8F91\u5668
-command.opengroupmngt=\u7FA4\u7EC4\u7BA1\u7406
-command.openrightmngt=\u6743\u9650\u7BA1\u7406
-command.openstatistic=\u7EDF\u8BA1\u6570\u636E
-command.personalnote=\u7B14\u8BB0
-course.closed=\u672C\u5B66\u7A0B\u5DF2\u88AB\u5173\u95ED\uFF0C\u56E0\u6B64\u4E0D\u518D\u80FD\u88AB\u7F16\u8F91\u548C\u66F4\u65B0\u3002
-course.disposed.command.restart=\u5173\u95ED\u5B66\u7A0B\u5E76\u4ECE\u542F\u7CFB\u7EDF
-course.disposed.message=\u8BF7\u5173\u95ED\u672C\u5B66\u7A0B\u5E76\u91CD\u542F\u7CFB\u7EDF\u3002
-course.disposed.title=\u672C\u5B66\u7A0B\u5DF2\u88AB\u4FEE\u6539\u3002
-course.just.published=\u672C\u5B66\u7A0B\u7A0B\u5DF2\u7ECF\u4FEE\u6539\u3002\u8BF7\u5173\u95ED\u5B66\u7A0B\uFF0C\u5E76\u91CD\u542F\u7CFB\u7EDF\u3002
-course.noaccess.text=\u60A8\u6CA1\u6709\u53C2\u4E0E\u672C\u5B66\u7A0B\u7684\u6743\u9650\uFF0C\u8BF7\u60A8\u8054\u7CFB\u5B66\u7A0B\u7684\u8BB2\u5E08\u3002
-course.noaccess.title=\u65E0\u6CD5\u8BBF\u95EE\u672C\u5B66\u7A0B
-course.presence.message.enter=\u8FDB\u5165\u5B66\u7A0B\uFF1A
-course.presence.message.leave=\u79BB\u5F00\u5B66\u7A0B\uFF1A
-coursenoaccess.title=\u65E0\u6CD5\u8BBF\u95EE\u8BE5\u5B66\u7A0B\u3002
-error.editoralreadylocked=\u7528\u6237{0}\u6B63\u5728\u7F16\u8F91\u8BE5\u5B66\u7A0B\u3002
-error.invalid.group=\u4F60\u5DF2\u7ECF\u4ECE\u8BE5\u7EC4\u79FB\u9664\u4E86\u3002\u56E0\u6B64\u8BE5\u7EC4\u65E0\u6CD5\u663E\u793A\u60A8\u7684\u4FE1\u606F\u3002
-error.noglossary=\u8FD9\u4E2A\u672F\u8BED\u8BCD\u6C47\u8868\u76EE\u524D\u4E0D\u53EF\u7528\u3002
-header.tools.general=\u7EFC\u5408
-header.tools.ownerGroups=\u8F85\u5BFC\u6559\u5E08\u7FA4\u7EC4
-header.tools.participatedGroups=\u6211\u7684\u5B66\u4E60\u7EC4
-header.tools.waitingListGroups=\u5728\u7B49\u5F85\u5217\u8868\u4E0A
-msg.nodenotavailableanymore=\u540C\u65F6\uFF0C\u4F60\u7684\u8BBF\u95EE\u6743\u9650\u5DF2\u7ECF\u6539\u53D8\u3002\u56E0\u6B64\u4F60\u65E0\u6CD5\u9009\u62E9\u6240\u9700\u7684\u5B66\u7A0B\u5143\u7D20\u3002
-participants.in.course=\u4EBA\u6B63\u5728\u5B66\u4E60
-participants.in.course.desc=\u5B66\u7A0B\u7684\u5B66\u5458\u4EBA\u6570
-warn.cannotactivatesinceintool=\u4E00\u4E2A\u540C\u6837\u7684\u5B66\u7A0B\u5DE5\u5177\u6B63\u5728\u4F7F\u7528\uFF0C\u82E5\u8981\u4F7F\u7528\u6B64\u5DE5\u5177\uFF0C\u8BF7\u5148\u5173\u95ED\u5F53\u524D\u4F7F\u7528\u7684\u5B66\u7A0B\u5DE5\u5177\u3002
+command.coursesearch=\u8bfe\u7a0b\u641c\u7d22
+header.tools.mycourse=\u6211\u7684\u8bfe\u7a0b
+header.tools=\u7ba1\u7406
+command.opensimplegroupmngt=\u6210\u5458\u7ba1\u7406
+command.options.reminders=\u63d0\u9192
+command.reminders=\u63d0\u9192
+command.assessment.mode=\u8bc4\u4f30\u6a21\u5f0f
+command.courseareas=\u5b66\u4e60\u9886\u57df
+
+
+
+
+
+
+command.bookmark=\u8bbe\u7f6e\u4e66\u7b7e
+command.calendar=\u65e5\u7a0b\u8868
+command.close=\u5173\u95ed\u8bfe\u7a0b
+command.close.courseconfig=\u5173\u95ed\u8bbe\u7f6e
+command.coursechat=\u8bfe\u5802\u8ba8\u8bba
+command.courseconfig=\u8be6\u7ec6\u9875\u9762
+command.coursefolder=\u5b58\u50a8\u5939 
+command.efficiencystatement=\u6210\u7ee9\u5355
+command.glossary=\u8bcd\u5178
+command.glossary.off=\u5173\u95ed
+command.glossary.off.alt=\u4ece\u5b66\u4e60\u5185\u5bb9\u4e2d\u9690\u85cf\u672f\u8bed\u8bcd\u6c47\u8868
+command.glossary.on=\u5f00\u542f
+command.glossary.on.alt=\u5728\u5b66\u4e60\u5185\u5bb9\u4e2d\u663e\u793a\u672f\u8bed\u8bcd\u6c47\u8868
+command.openarchiver=\u5b58\u6863\u5de5\u5177
+command.openassessment=\u8bc4\u4f30\u5de5\u5177
+command.openeditor=\u5b66\u7a0b\u7f16\u8f91\u5668
+command.opengroupmngt=\u7fa4\u7ec4\u7ba1\u7406
+command.openrightmngt=\u6743\u9650\u7ba1\u7406
+command.openstatistic=\u7edf\u8ba1\u6570\u636e
+command.personalnote=\u7b14\u8bb0
+course.closed=\u672c\u5b66\u7a0b\u5df2\u88ab\u5173\u95ed\uff0c\u56e0\u6b64\u4e0d\u518d\u80fd\u88ab\u7f16\u8f91\u548c\u66f4\u65b0\u3002
+course.disposed.command.restart=\u5173\u95ed\u5b66\u7a0b\u5e76\u4ece\u542f\u7cfb\u7edf
+course.disposed.message=\u8bf7\u5173\u95ed\u672c\u5b66\u7a0b\u5e76\u91cd\u542f\u7cfb\u7edf\u3002
+course.disposed.title=\u672c\u5b66\u7a0b\u5df2\u88ab\u4fee\u6539\u3002
+course.just.published=\u672c\u5b66\u7a0b\u7a0b\u5df2\u7ecf\u4fee\u6539\u3002\u8bf7\u5173\u95ed\u5b66\u7a0b\uff0c\u5e76\u91cd\u542f\u7cfb\u7edf\u3002
+course.noaccess.text=\u60a8\u6ca1\u6709\u53c2\u4e0e\u672c\u5b66\u7a0b\u7684\u6743\u9650\uff0c\u8bf7\u60a8\u8054\u7cfb\u5b66\u7a0b\u7684\u8bb2\u5e08\u3002
+course.noaccess.title=\u65e0\u6cd5\u8bbf\u95ee\u672c\u5b66\u7a0b
+course.presence.message.enter=\u8fdb\u5165\u5b66\u7a0b\uff1a
+course.presence.message.leave=\u79bb\u5f00\u5b66\u7a0b\uff1a
+coursenoaccess.title=\u65e0\u6cd5\u8bbf\u95ee\u8be5\u5b66\u7a0b\u3002
+error.editoralreadylocked=\u7528\u6237{0}\u6b63\u5728\u7f16\u8f91\u8be5\u5b66\u7a0b\u3002
+error.invalid.group=\u4f60\u5df2\u7ecf\u4ece\u8be5\u7ec4\u79fb\u9664\u4e86\u3002\u56e0\u6b64\u8be5\u7ec4\u65e0\u6cd5\u663e\u793a\u60a8\u7684\u4fe1\u606f\u3002
+error.noglossary=\u8fd9\u4e2a\u672f\u8bed\u8bcd\u6c47\u8868\u76ee\u524d\u4e0d\u53ef\u7528\u3002
+header.tools.general=\u7efc\u5408
+header.tools.ownerGroups=\u8f85\u5bfc\u6559\u5e08\u7fa4\u7ec4
+header.tools.participatedGroups=\u6211\u7684\u5b66\u4e60\u7ec4
+header.tools.waitingListGroups=\u5728\u7b49\u5f85\u5217\u8868\u4e0a
+msg.nodenotavailableanymore=\u540c\u65f6\uff0c\u4f60\u7684\u8bbf\u95ee\u6743\u9650\u5df2\u7ecf\u6539\u53d8\u3002\u56e0\u6b64\u4f60\u65e0\u6cd5\u9009\u62e9\u6240\u9700\u7684\u5b66\u7a0b\u5143\u7d20\u3002
+participants.in.course=\u4eba\u6b63\u5728\u5b66\u4e60
+participants.in.course.desc=\u5b66\u7a0b\u7684\u5b66\u5458\u4eba\u6570
+warn.cannotactivatesinceintool=\u4e00\u4e2a\u540c\u6837\u7684\u5b66\u7a0b\u5de5\u5177\u6b63\u5728\u4f7f\u7528\uff0c\u82e5\u8981\u4f7f\u7528\u6b64\u5de5\u5177\uff0c\u8bf7\u5148\u5173\u95ed\u5f53\u524d\u4f7f\u7528\u7684\u5b66\u7a0b\u5de5\u5177\u3002
