--- a/src/main/java/org/olat/group/ui/run/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/group/ui/run/_i18n/LocalStrings_zh_CN.properties
@@ -1,74 +1,75 @@
 #Wed Sep 28 05:08:54 CEST 2016
-businessgroup.contact.bodytext=---\r\n\u7ACB\u5373\u8F6C\u5230\u7FA4\u7EC4"{0}"\: {1}</p>
+email.from=\u4ece
+businessgroup.contact.bodytext=---\r\n\u7acb\u5373\u8f6c\u5230\u7fa4\u7ec4"{0}"\: {1}</p>
 businessgroup.contact.subject={0}
-group.access.denied=\u60A8\u6CA1\u6709\u8BBF\u95EE\u672C\u7FA4\u7EC4\u6240\u8981\u6C42\u7684\u6743\u9650
+group.access.denied=\u60a8\u6ca1\u6709\u8bbf\u95ee\u672c\u7fa4\u7ec4\u6240\u8981\u6c42\u7684\u6743\u9650
 group.deleted=$org.olat.group.ui\:group.deleted
-group.on.waitinglist=\u60A8\u8FD8\u5728\u672C\u7FA4\u7EC4\u7684\u7B49\u5F85\u5217\u8868\u4E2D\uFF0C\u8BF7\u8010\u5FC3\u7B49\u5F85\u3002
+group.on.waitinglist=\u60a8\u8fd8\u5728\u672c\u7fa4\u7ec4\u7684\u7b49\u5f85\u5217\u8868\u4e2d\uff0c\u8bf7\u8010\u5fc3\u7b49\u5f85\u3002
 groupchat.not.available=$org.olat.instantMessaging.groupchat\:groupchat.not.available
-grouprun.configurationchanged=\u8BE5\u7EC4\u914D\u7F6E\u5DF2\u66F4\u6539\u5E76\u4E14\u91CD\u65B0\u542F\u52A8
-grouprun.details.description=\u8BF4\u660E
-grouprun.details.name=\u7EC4\u540D
-grouprun.details.title=\u4FE1\u606F
-grouprun.disabled=\u5F53\u524D\u6240\u6709\u7684OpenOLAT\u534F\u4F5C\u5143\u7D20\u90FD\u88AB\u963B\u6B62(\u4F8B\u5982\uFF1A\u56E0\u4E3A\u60A8\u7F16\u8F91\u4E00\u4E2A\u6D4B\u8BD5)\u3002\u8BF7\u60A8\u5148\u64A4\u6D88\u6216\u8005\u5B8C\u6210\u5F53\u524D\u64CD\u4F5C\uFF0C\u624D\u80FD\u4F7F\u7528\u534F\u4F5C\u5DE5\u5177\u3002
-grouprun.removedfromgroup=\u7FA4\u7EC4\u914D\u7F6E\u5DF2\u66F4\u6539\uFF08\u7FA4\u7EC4\u5220\u9664\uFF0C\u7FA4\u7EC4\u6210\u5458\u66F4\u6539\uFF09\u3002\u8BF7\u60A8\u5173\u95ED\u6807\u7B7E
-menutree.ac=\u9884\u8BA2
-menutree.ac.alt=\u9884\u8BA2
-menutree.administration=\u7BA1\u7406
-menutree.administration.alt=\u7BA1\u7406
-menutree.calendar=\u65E5\u5386
-menutree.calendar.alt=\u65E5\u671F
-menutree.chat=\u804A\u5929
-menutree.chat.alt=\u4E0E\u5176\u4ED6\u7FA4\u7EC4\u6210\u5458\u804A\u5929\u3002
-menutree.contactform=\u7535\u5B50\u90AE\u4EF6
+grouprun.configurationchanged=\u8be5\u7ec4\u914d\u7f6e\u5df2\u66f4\u6539\u5e76\u4e14\u91cd\u65b0\u542f\u52a8
+grouprun.details.description=\u8bf4\u660e
+grouprun.details.name=\u7ec4\u540d
+grouprun.details.title=\u4fe1\u606f
+grouprun.disabled=\u5f53\u524d\u6240\u6709\u7684OpenOLAT\u534f\u4f5c\u5143\u7d20\u90fd\u88ab\u963b\u6b62(\u4f8b\u5982\uff1a\u56e0\u4e3a\u60a8\u7f16\u8f91\u4e00\u4e2a\u6d4b\u8bd5)\u3002\u8bf7\u60a8\u5148\u64a4\u6d88\u6216\u8005\u5b8c\u6210\u5f53\u524d\u64cd\u4f5c\uff0c\u624d\u80fd\u4f7f\u7528\u534f\u4f5c\u5de5\u5177\u3002
+grouprun.removedfromgroup=\u7fa4\u7ec4\u914d\u7f6e\u5df2\u66f4\u6539\uff08\u7fa4\u7ec4\u5220\u9664\uff0c\u7fa4\u7ec4\u6210\u5458\u66f4\u6539\uff09\u3002\u8bf7\u60a8\u5173\u95ed\u6807\u7b7e
+menutree.ac=\u9884\u8ba2
+menutree.ac.alt=\u9884\u8ba2
+menutree.administration=\u7ba1\u7406
+menutree.administration.alt=\u7ba1\u7406
+menutree.calendar=\u65e5\u5386
+menutree.calendar.alt=\u65e5\u671f
+menutree.chat=\u804a\u5929
+menutree.chat.alt=\u4e0e\u5176\u4ed6\u7fa4\u7ec4\u6210\u5458\u804a\u5929\u3002
+menutree.contactform=\u7535\u5b50\u90ae\u4ef6
 menutree.contactform.alt=E-mail
-menutree.folder=\u6587\u4EF6\u5939
-menutree.folder.alt=\u6587\u4EF6\u5939
-menutree.forum=\u8BBA\u575B
-menutree.forum.alt=\u8BBA\u575B
+menutree.folder=\u6587\u4ef6\u5939
+menutree.folder.alt=\u6587\u4ef6\u5939
+menutree.forum=\u8bba\u575b
+menutree.forum.alt=\u8bba\u575b
 menutree.members=\u6210\u5458
-menutree.members.alt=\u663E\u793A\u6210\u5458
-menutree.news=\u4FE1\u606F
-menutree.news.alt=\u6240\u6709\u6210\u5458\u4FE1\u606F
-menutree.openmeetings=\u5F00\u653E\u4F1A\u8BAE
-menutree.openmeetings.alt=Apache\u5F00\u653E\u4F1A\u8BAE
-menutree.portfolio=\u7EC4\u5408
-menutree.portfolio.alt=\u534F\u4F5C\u7EC4\u5408
-menutree.resources=\u8BFE\u7A0B
-menutree.resources.alt=\u8BE5\u5B66\u4E60\u8D44\u6E90\u7684\u8BFE\u7A0B
-menutree.top.alt=\u5DE5\u4F5C\u7EC4
-menutree.wiki=\u7EF4\u57FA
-menutree.wiki.alt=\u534F\u4F5C\u5185\u5BB9\u7BA1\u7406\u7CFB\u7EDF
-resources.intro=\u8BE5\u7FA4\u7EC4\u6709\u8BBF\u95EE\u4EE5\u4E0B\u6240\u5217\u8BFE\u7A0B\u7684\u6743\u9650\u3002
-resources.launch=\u5F00\u59CB
-resources.noresources=\u8BE5\u7FA4\u7EC4\u8FD8\u6CA1\u6709\u8BFE\u7A0B\u3002
-resources.title=\u8BFE\u7A0B
-sendtochooser.email.disclaimer=\u8BF7\u60A8\u6CE8\u610F\uFF0C\u53EA\u80FD\u4E3A\u7814\u7A76\u548C\u5B66\u4E60\u7684\u76EE\u7684\u53D1\u9001\u7535\u5B50\u90AE\u4EF6\u3002\u5176\u4ED6\u5185\u5BB9\u8BF7\u89C1\u4F7F\u7528\u6761\u6B3E\u3002
-sendtochooser.form.chckbx.owners=\u5168\u90E8\u8F85\u5BFC\u8005
-sendtochooser.form.chckbx.partip=\u5168\u90E8\u53C2\u4E0E\u8005
-sendtochooser.form.chckbx.waitingList=\u7B49\u5F85\u540D\u5355\u91CC\u7684\u6240\u6709\u4EBA
-sendtochooser.form.error.nonselected=\u81F3\u5C11\u9009\u62E9\u4E00\u4E2A\u63A5\u6536\u7EC4
-sendtochooser.form.error.norecipent=\u81F3\u5C11\u9009\u62E9\u4E00\u4E2A\u63A5\u6536\u8005\u3002
-sendtochooser.form.header=\u9009\u62E9\u7535\u5B50\u90AE\u4EF6\u63A5\u6536\u8005
-sendtochooser.form.radio.owners=\u8F85\u5BFC\u8005
-sendtochooser.form.radio.owners.all=\u6240\u6709\u8F85\u5BFC\u8005
-sendtochooser.form.radio.owners.choose=\u5DF2\u9009\u62E9\u7684\u8F85\u5BFC\u8005
-sendtochooser.form.radio.owners.nothing=\u6CA1\u6709\u8F85\u5BFC\u8005
-sendtochooser.form.radio.partip=\u53C2\u4E0E\u8005
-sendtochooser.form.radio.partip.all=\u6240\u6709\u53C2\u4E0E\u8005
-sendtochooser.form.radio.partip.choose=\u5DF2\u9009\u62E9\u7684\u53C2\u4E0E\u8005
-sendtochooser.form.radio.partip.nothing=\u6CA1\u6709\u53C2\u4E0E\u8005
+menutree.members.alt=\u663e\u793a\u6210\u5458
+menutree.news=\u4fe1\u606f
+menutree.news.alt=\u6240\u6709\u6210\u5458\u4fe1\u606f
+menutree.openmeetings=\u5f00\u653e\u4f1a\u8bae
+menutree.openmeetings.alt=Apache\u5f00\u653e\u4f1a\u8bae
+menutree.portfolio=\u7ec4\u5408
+menutree.portfolio.alt=\u534f\u4f5c\u7ec4\u5408
+menutree.resources=\u8bfe\u7a0b
+menutree.resources.alt=\u8be5\u5b66\u4e60\u8d44\u6e90\u7684\u8bfe\u7a0b
+menutree.top.alt=\u5de5\u4f5c\u7ec4
+menutree.wiki=\u7ef4\u57fa
+menutree.wiki.alt=\u534f\u4f5c\u5185\u5bb9\u7ba1\u7406\u7cfb\u7edf
+resources.intro=\u8be5\u7fa4\u7ec4\u6709\u8bbf\u95ee\u4ee5\u4e0b\u6240\u5217\u8bfe\u7a0b\u7684\u6743\u9650\u3002
+resources.launch=\u5f00\u59cb
+resources.noresources=\u8be5\u7fa4\u7ec4\u8fd8\u6ca1\u6709\u8bfe\u7a0b\u3002
+resources.title=\u8bfe\u7a0b
+sendtochooser.email.disclaimer=\u8bf7\u60a8\u6ce8\u610f\uff0c\u53ea\u80fd\u4e3a\u7814\u7a76\u548c\u5b66\u4e60\u7684\u76ee\u7684\u53d1\u9001\u7535\u5b50\u90ae\u4ef6\u3002\u5176\u4ed6\u5185\u5bb9\u8bf7\u89c1\u4f7f\u7528\u6761\u6b3e\u3002
+sendtochooser.form.chckbx.owners=\u5168\u90e8\u8f85\u5bfc\u8005
+sendtochooser.form.chckbx.partip=\u5168\u90e8\u53c2\u4e0e\u8005
+sendtochooser.form.chckbx.waitingList=\u7b49\u5f85\u540d\u5355\u91cc\u7684\u6240\u6709\u4eba
+sendtochooser.form.error.nonselected=\u81f3\u5c11\u9009\u62e9\u4e00\u4e2a\u63a5\u6536\u7ec4
+sendtochooser.form.error.norecipent=\u81f3\u5c11\u9009\u62e9\u4e00\u4e2a\u63a5\u6536\u8005\u3002
+sendtochooser.form.header=\u9009\u62e9\u7535\u5b50\u90ae\u4ef6\u63a5\u6536\u8005
+sendtochooser.form.radio.owners=\u8f85\u5bfc\u8005
+sendtochooser.form.radio.owners.all=\u6240\u6709\u8f85\u5bfc\u8005
+sendtochooser.form.radio.owners.choose=\u5df2\u9009\u62e9\u7684\u8f85\u5bfc\u8005
+sendtochooser.form.radio.owners.nothing=\u6ca1\u6709\u8f85\u5bfc\u8005
+sendtochooser.form.radio.partip=\u53c2\u4e0e\u8005
+sendtochooser.form.radio.partip.all=\u6240\u6709\u53c2\u4e0e\u8005
+sendtochooser.form.radio.partip.choose=\u5df2\u9009\u62e9\u7684\u53c2\u4e0e\u8005
+sendtochooser.form.radio.partip.nothing=\u6ca1\u6709\u53c2\u4e0e\u8005
 sendtochooser.form.radio.partip.rightgroup.all=\u6240\u6709\u6210\u5458
-sendtochooser.form.radio.partip.rightgroup.choose=\u5DF2\u9009\u62E9\u7684\u6210\u5458
+sendtochooser.form.radio.partip.rightgroup.choose=\u5df2\u9009\u62e9\u7684\u6210\u5458
 sendtochooser.form.radio.rightgroup=\u6210\u5458
-sendtochooser.form.radio.waitings=\u7B49\u5F85\u540D\u5355
-sendtochooser.form.radio.waitings.all=\u6240\u6709\u7B49\u5F85\u8005
-sendtochooser.form.radio.waitings.choose=\u5DF2\u9009\u62E9\u7684\u7B49\u5F85\u8005
-sendtochooser.form.radio.waitings.nothing=\u6CA1\u6709\u7B49\u5F85\u8005
-sendtochooser.form.submit=\u4E0B\u4E00\u6B65
-userlist.show.no.owners.text=\u4E0D\u53EF\u89C1
-userlist.show.no.owners.title=\u8F85\u5BFC\u8005
-userlist.show.no.participants.text=\u4E0D\u53EF\u89C1
-userlist.show.no.participants.title=\u53C2\u4E0E\u8005
-userlist.show.no.waitinglist.text=\u4E0D\u53EF\u89C1
-userlist.show.no.waitinglist.title=\u7B49\u5F85\u540D\u5355
-userlist.title=\u7FA4\u7EC4\u6210\u5458
+sendtochooser.form.radio.waitings=\u7b49\u5f85\u540d\u5355
+sendtochooser.form.radio.waitings.all=\u6240\u6709\u7b49\u5f85\u8005
+sendtochooser.form.radio.waitings.choose=\u5df2\u9009\u62e9\u7684\u7b49\u5f85\u8005
+sendtochooser.form.radio.waitings.nothing=\u6ca1\u6709\u7b49\u5f85\u8005
+sendtochooser.form.submit=\u4e0b\u4e00\u6b65
+userlist.show.no.owners.text=\u4e0d\u53ef\u89c1
+userlist.show.no.owners.title=\u8f85\u5bfc\u8005
+userlist.show.no.participants.text=\u4e0d\u53ef\u89c1
+userlist.show.no.participants.title=\u53c2\u4e0e\u8005
+userlist.show.no.waitinglist.text=\u4e0d\u53ef\u89c1
+userlist.show.no.waitinglist.title=\u7b49\u5f85\u540d\u5355
+userlist.title=\u7fa4\u7ec4\u6210\u5458
