--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_zh_CN.properties
@@ -1,146 +1,150 @@
 #Tue Mar 28 14:13:21 CEST 2017
-add.match.column=\u589E\u52A0\u5217
-add.match.row=\u589E\u52A0\u884C
-answers=\u7B54\u6848
-change.elements=\u7248\u672C
-correct.answers=\u6B63\u786E
-cut.value=\u53CA\u683C\u5206\u6570
+error.assessment.test=\u8be5\u6587\u4ef6\u65e0\u6cd5\u88ab\u89e3\u91ca\u3002\u5b83\u4f3c\u4e4e\u5df2\u635f\u574f\u6216\u683c\u5f0f\u9519\u8bef\u3002
+
+
+
+add.match.column=\u589e\u52a0\u5217
+add.match.row=\u589e\u52a0\u884c
+answers=\u7b54\u6848
+change.elements=\u7248\u672c
+correct.answers=\u6b63\u786e
+cut.value=\u53ca\u683c\u5206\u6570
 delete.item=$org.olat.ims.qti.editor\:delete.item
 delete.section=$org.olat.ims.qti.editor\:delete.section
-delete.testPart=\u60A8\u771F\u7684\u8981\u5220\u9664\u6D4B\u8BD5\u90E8\u5206\u53CA\u6240\u6709\u95EE\u9898\u5417\uFF1F
-editor.sc.title=\u5355\u4E2A\u9009\u62E9
-editor.unkown.title=\u672A\u77E5\u4EA4\u4E92
-error.cannot.create.section=\u4EFB\u4F55\u5730\u65B9\u90FD\u4E0D\u80FD\u521B\u5EFA\u8282
-error.cannot.delete=\u60A8\u4E0D\u80FD\u5220\u9664\u8FD9\u4E2A\u5BF9\u8C61
+delete.testPart=\u60a8\u771f\u7684\u8981\u5220\u9664\u6d4b\u8bd5\u90e8\u5206\u53ca\u6240\u6709\u95ee\u9898\u5417\uff1f
+editor.sc.title=\u5355\u4e2a\u9009\u62e9
+editor.unkown.title=\u672a\u77e5\u4ea4\u4e92
+error.cannot.create.section=\u4efb\u4f55\u5730\u65b9\u90fd\u4e0d\u80fd\u521b\u5efa\u8282
+error.cannot.delete=\u60a8\u4e0d\u80fd\u5220\u9664\u8fd9\u4e2a\u5bf9\u8c61
 error.double=$org.olat.ims.qti21.ui\:error.double
-error.import.question=\u5728\u5BFC\u5165\u95EE\u9898\u65F6\u51FA\u73B0\u4E86\u4E00\u4E2A\u672A\u6599\u9519\u8BEF
-error.lock=\u7528\u6237{ 0 }\u6B63\u5728\u7F16\u8F91\u6B64\u6D4B\u8BD5/\u95EE\u5377\uFF0C\u5B83\u88AB\u9501\u5B9A\u4E86\u3002
-error.lock.title=\u6D4B\u8BD5\u88AB\u9501\u5B9A
+error.import.question=\u5728\u5bfc\u5165\u95ee\u9898\u65f6\u51fa\u73b0\u4e86\u4e00\u4e2a\u672a\u6599\u9519\u8bef
+error.lock=\u7528\u6237{ 0 }\u6b63\u5728\u7f16\u8f91\u6b64\u6d4b\u8bd5/\u95ee\u5377\uff0c\u5b83\u88ab\u9501\u5b9a\u4e86\u3002
+error.lock.title=\u6d4b\u8bd5\u88ab\u9501\u5b9a
 error.mimetype=$org.olat.core.commons.modules.bc\:WrongMimeType
-error.need.correct.answer=\u60A8\u5FC5\u987B\u6709\u81F3\u5C11\u4E00\u4E2A\u6B63\u786E\u7B54\u6848
-error.positive.double=\u53EA\u5141\u8BB8\u6B63\u6570\uFF0C\u4F8B\u5982\uFF1A15.0\uFF0C5\uFF0C5\uFF0C10
-error.singlechoice=\u9009\u62E9\u4E00\u4E2A
-essay.expectedLength=\u5B57\u7B26\u6570
-essay.max.strings=\u6700\u5927\u5B57\u7B26\u6570
-essay.min.strings=\u6700\u5C0F\u5B57\u7B26\u6570
-essay.rows=\u9AD8\u5EA6\uFF08\u884C\u6570\uFF09
+error.need.correct.answer=\u60a8\u5fc5\u987b\u6709\u81f3\u5c11\u4e00\u4e2a\u6b63\u786e\u7b54\u6848
+error.positive.double=\u53ea\u5141\u8bb8\u6b63\u6570\uff0c\u4f8b\u5982\uff1a15.0\uff0c5\uff0c5\uff0c10
+error.singlechoice=\u9009\u62e9\u4e00\u4e2a
+essay.expectedLength=\u5b57\u7b26\u6570
+essay.max.strings=\u6700\u5927\u5b57\u7b26\u6570
+essay.min.strings=\u6700\u5c0f\u5b57\u7b26\u6570
+essay.rows=\u9ad8\u5ea6\uff08\u884c\u6570\uff09
 export.qpool.successful=$org.olat.ims.qti.editor\:export.qpool.successful
 fib.alternative=\u5907\u9009
-fib.caseSensitive=\u533A\u5206\u5927\u5C0F\u5199
-fib.expectedLength=\u95F4\u9694\u5927\u5C0F
-fib.placeholder=\u5360\u4F4D\u7B26
-fib.solution=\u89E3\u51B3\u65B9\u6848
-fib.tolerance.low=\u4E0B\u9650
-fib.tolerance.mode=\u5BB9\u5DEE\u6A21\u5F0F
-fib.tolerance.mode.absolute=\u7EDD\u5BF9
-fib.tolerance.mode.absolute.example=\u6570\u503C\uFF0C\u4F8B\u59821.5\u62161322
-fib.tolerance.mode.exact=\u7CBE\u786E
-fib.tolerance.mode.relative=\u76F8\u5BF9
-fib.tolerance.mode.relative.example=\u767E\u5206\u6570\uFF0C\u4F8B\u598215\u621699.0
-fib.tolerance.up=\u4E0A\u9650
-file=\u6587\u4EF6
-form.choice=\u9009\u62E9
-form.drawing=\u56FE\u753B
-form.essay=\u5C0F\u8BBA\u6587
-form.feedback=\u53CD\u9988
-form.fib=\u7A7A\u767D\u6587\u672C
-form.hotspot=\u70ED\u70B9
-form.imd.alignment=\u590D\u9009\u6846\u5BF9\u9F50
-form.imd.alignment.left=\u5DE6
-form.imd.alignment.right=\u53F3
-form.imd.answer=\u7B54\u6848
-form.imd.answered.text=\u53CD\u9988\u7684\u7B54\u6848
+fib.caseSensitive=\u533a\u5206\u5927\u5c0f\u5199
+fib.expectedLength=\u95f4\u9694\u5927\u5c0f
+fib.placeholder=\u5360\u4f4d\u7b26
+fib.solution=\u89e3\u51b3\u65b9\u6848
+fib.tolerance.low=\u4e0b\u9650
+fib.tolerance.mode=\u5bb9\u5dee\u6a21\u5f0f
+fib.tolerance.mode.absolute=\u7edd\u5bf9
+fib.tolerance.mode.absolute.example=\u6570\u503c\uff0c\u4f8b\u59821.5\u62161322
+fib.tolerance.mode.exact=\u7cbe\u786e
+fib.tolerance.mode.relative=\u76f8\u5bf9
+fib.tolerance.mode.relative.example=\u767e\u5206\u6570\uff0c\u4f8b\u598215\u621699.0
+fib.tolerance.up=\u4e0a\u9650
+file=\u6587\u4ef6
+form.choice=\u9009\u62e9
+form.drawing=\u56fe\u753b
+form.essay=\u5c0f\u8bba\u6587
+form.feedback=\u53cd\u9988
+form.fib=\u7a7a\u767d\u6587\u672c
+form.hotspot=\u70ed\u70b9
+form.imd.alignment=\u590d\u9009\u6846\u5bf9\u9f50
+form.imd.alignment.left=\u5de6
+form.imd.alignment.right=\u53f3
+form.imd.answer=\u7b54\u6848
+form.imd.answered.text=\u53cd\u9988\u7684\u7b54\u6848
 form.imd.answered.title=\u6807\u9898
-form.imd.background=\u80CC\u666F
+form.imd.background=\u80cc\u666f
 form.imd.correct.kprim=True
-form.imd.correctSolution.text=\u6B63\u786E\u7B54\u6848
+form.imd.correctSolution.text=\u6b63\u786e\u7b54\u6848
 form.imd.correctSolution.text.word=$\:form.imd.correctSolution.text (only for Word export)
 form.imd.correctSolution.title=\u8868\u5934
 form.imd.correct.spots=Correct spots
-form.imd.correct.text=\u5BF9\u6240\u6709\u6B63\u786E\u7B54\u6848\u7684\u53CD\u9988
+form.imd.correct.text=\u5bf9\u6240\u6709\u6b63\u786e\u7b54\u6848\u7684\u53cd\u9988
 form.imd.correct.title=\u6807\u9898
-form.imd.descr=\u95EE\u9898
-form.imd.empty.text=\u53CD\u9988\u4E3A\u7A7A
-form.imd.empty.title=\u7A7A\u6807\u9898
-form.imd.hint.text=\u63D0\u793A
+form.imd.descr=\u95ee\u9898
+form.imd.empty.text=\u53cd\u9988\u4e3a\u7a7a
+form.imd.empty.title=\u7a7a\u6807\u9898
+form.imd.hint.text=\u63d0\u793a
 form.imd.hint.title=\u6807\u9898
-form.imd.incorrect.text=\u7B54\u6848\u9519\u8BEF
+form.imd.incorrect.text=\u7b54\u6848\u9519\u8bef
 form.imd.incorrect.title=\u6807\u9898
 form.imd.layout=$org.olat.ims.qti.editor\:form.imd.layout
 form.imd.layout.horizontal=$org.olat.ims.qti.editor\:form.imd.layout.horizontal
 form.imd.layout.vertical=$org.olat.ims.qti.editor\:form.imd.layout.vertical
 form.imd.limittries=$org.olat.ims.qti.editor\:form.imd.limittries
-form.imd.match.multiple.choice=\u591A\u9009\u9898
+form.imd.match.multiple.choice=\u591a\u9009\u9898
 form.imd.match.single.choice=\u5355\u9009\u9898
-form.imd.match.single.multiple=\u7C7B\u578B
-form.imd.mimetype=\u671F\u671B\u7684mime\u7C7B\u578B
-form.imd.rubric=\u63CF\u8FF0
+form.imd.match.single.multiple=\u7c7b\u578b
+form.imd.mimetype=\u671f\u671b\u7684mime\u7c7b\u578b
+form.imd.rubric=\u63cf\u8ff0
 form.imd.shuffle=Shuffle answers
 form.imd.title=\u6807\u9898
 form.imd.wrong.kprim=False
 form.kprim=Kprim
-form.match=\u914D\u5BF9
-form.metadata=\u5143\u6570\u636E
-form.metadata.description=\u63CF\u8FF0
+form.match=\u914d\u5bf9
+form.metadata=\u5143\u6570\u636e
+form.metadata.description=\u63cf\u8ff0
 form.metadata.title=\u6807\u9898
 form.score=\u5206\u6570
-form.score.answer.correct=\u6B63\u786E
-form.score.answer.points=\u5F97\u5206
+form.score.answer.correct=\u6b63\u786e
+form.score.answer.points=\u5f97\u5206
 form.score.answer.summary=Answer summary
-form.score.assessment.all.correct=\u6240\u6709\u6B63\u786E\u7B54\u6848
-form.score.assessment.mode=\u8BC4\u4F30\u65B9\u6CD5
-form.score.assessment.per.answer=\u6BCF\u4E2A\u7B54\u6848\u5206\u6570
+form.score.assessment.all.correct=\u6240\u6709\u6b63\u786e\u7b54\u6848
+form.score.assessment.mode=\u8bc4\u4f30\u65b9\u6cd5
+form.score.assessment.per.answer=\u6bcf\u4e2a\u7b54\u6848\u5206\u6570
 form.section.selection_all=$org.olat.ims.qti.editor\:form.section.selection_all
-form.section.selection_pre=\u672C\u8282\u7684\u95EE\u9898\u6570
-form.section.selection_pre.hover=\u9009\u62E9\u662F\u6D4B\u9A8C\u4E2D\u662F\u663E\u793A\u6240\u6709\u95EE\u9898\u8FD8\u662F\u6307\u5B9A\u6570\u91CF\u7684\u95EE\u9898
-form.section.shuffle=\u95EE\u9898\u968F\u673A\u6392\u5E8F\u5417\uFF1F
-form.section.visible=\u5728\u6D4B\u9A8C\u4E2D\u663E\u793A\u8282\u7684\u6807\u9898
-form.test.correct.text=\u6240\u6709\u6B63\u786E\u7B54\u6848\u7684\u53CD\u9988
+form.section.selection_pre=\u672c\u8282\u7684\u95ee\u9898\u6570
+form.section.selection_pre.hover=\u9009\u62e9\u662f\u6d4b\u9a8c\u4e2d\u662f\u663e\u793a\u6240\u6709\u95ee\u9898\u8fd8\u662f\u6307\u5b9a\u6570\u91cf\u7684\u95ee\u9898
+form.section.shuffle=\u95ee\u9898\u968f\u673a\u6392\u5e8f\u5417\uff1f
+form.section.visible=\u5728\u6d4b\u9a8c\u4e2d\u663e\u793a\u8282\u7684\u6807\u9898
+form.test.correct.text=\u6240\u6709\u6b63\u786e\u7b54\u6848\u7684\u53cd\u9988
 form.test.correct.title=\u6807\u9898
-form.test.incorrect.text=\u9519\u8BEF\u7B54\u6848\u7684\u53CD\u9988
+form.test.incorrect.text=\u9519\u8bef\u7b54\u6848\u7684\u53cd\u9988
 form.test.incorrect.title=\u6807\u9898
-form.testPart.navigationMode=\u5BFC\u822A\u6A21\u5F0F
-form.testPart.navigationMode.hint=\u7EBF\u6027\uFF1A\u5FC5\u987B\u6309\u7ED9\u5B9A\u7684\u987A\u5E8F\u89E3\u7B54\u95EE\u9898\u3002\u975E\u7EBF\u6027\uFF1A\u53EF\u4EE5\u9009\u62E9\u89E3\u7B54\u95EE\u9898\u7684\u987A\u5E8F\u3002
-form.testPart.navigationMode.linear=\u7EBF\u6027
-form.testPart.navigationMode.nonlinear=\u975E\u7EBF\u6027
-form.unkown=\u672A\u77E5
-form.upload=\u6587\u4EF6\u4E0A\u4F20
+form.testPart.navigationMode=\u5bfc\u822a\u6a21\u5f0f
+form.testPart.navigationMode.hint=\u7ebf\u6027\uff1a\u5fc5\u987b\u6309\u7ed9\u5b9a\u7684\u987a\u5e8f\u89e3\u7b54\u95ee\u9898\u3002\u975e\u7ebf\u6027\uff1a\u53ef\u4ee5\u9009\u62e9\u89e3\u7b54\u95ee\u9898\u7684\u987a\u5e8f\u3002
+form.testPart.navigationMode.linear=\u7ebf\u6027
+form.testPart.navigationMode.nonlinear=\u975e\u7ebf\u6027
+form.unkown=\u672a\u77e5
+form.upload=\u6587\u4ef6\u4e0a\u4f20
 hour.short=h
-inherit=\u7EE7\u627F
-item.session.control.allow.comment=\u5141\u8BB8\u8BC4\u8BBA
-item.session.control.allow.comment.hint=\u6D4B\u9A8C\u53C2\u5165\u8005\u53EF\u4EE5\u8BB0\u4E2A\u4EBA\u7B14\u8BB0\u3002\u672C\u529F\u80FD\u9700\u8981\u5728\u201C\u9009\u9879\u201D\u4E0B\u542F\u7528\u3002
-item.session.control.allow.review=\u5141\u8BB8\u56DE\u770B\u95EE\u9898
-item.session.control.allow.review.hint=\u5728\u5B8C\u6210\u6D4B\u9A8C\u540E\uFF0C\u53EF\u4EE5\u56DE\u770B\u95EE\u9898
-item.session.control.allow.skipping=\u5141\u8BB8\u8DF3\u8FC7\u95EE\u9898
-item.session.control.allow.skipping.hint=\u5728\u6240\u6709\u95EE\u9898\u90FD\u88AB\u89E3\u7B54\u524D\u7ED3\u675F\u6D4B\u9A8C\u3002
-item.session.control.attempts=\u5C1D\u8BD5\u6B21\u6570
-item.session.control.attempts.hint=\u8FD9\u4E2A\u5C1D\u8BD5\u6B21\u6570\u9650\u5236\u53EA\u5BF9\u90E8\u5206\u6D4B\u9A8C\u6709\u6548\uFF0C\u6574\u4E2A\u6D4B\u9A8C\u7684\u5C1D\u8BD5\u6B21\u6570\u9650\u5236\u5728\u201C\u9009\u9879\u201D\u4E0B\u8BBE\u7F6E\u3002
-item.session.control.show.solution=\u663E\u793A\u7B54\u6848
-item.session.control.show.solution.hint=\u7B54\u6848\u4E5F\u5728\u6821\u5BF9\u65F6\u663E\u793A
-max.score=\u6700\u9AD8\u5206\u6570
-min.score=\u6700\u4F4E\u5206\u6570
+inherit=\u7ee7\u627f
+item.session.control.allow.comment=\u5141\u8bb8\u8bc4\u8bba
+item.session.control.allow.comment.hint=\u6d4b\u9a8c\u53c2\u5165\u8005\u53ef\u4ee5\u8bb0\u4e2a\u4eba\u7b14\u8bb0\u3002\u672c\u529f\u80fd\u9700\u8981\u5728\u201c\u9009\u9879\u201d\u4e0b\u542f\u7528\u3002
+item.session.control.allow.review=\u5141\u8bb8\u56de\u770b\u95ee\u9898
+item.session.control.allow.review.hint=\u5728\u5b8c\u6210\u6d4b\u9a8c\u540e\uff0c\u53ef\u4ee5\u56de\u770b\u95ee\u9898
+item.session.control.allow.skipping=\u5141\u8bb8\u8df3\u8fc7\u95ee\u9898
+item.session.control.allow.skipping.hint=\u5728\u6240\u6709\u95ee\u9898\u90fd\u88ab\u89e3\u7b54\u524d\u7ed3\u675f\u6d4b\u9a8c\u3002
+item.session.control.attempts=\u5c1d\u8bd5\u6b21\u6570
+item.session.control.attempts.hint=\u8fd9\u4e2a\u5c1d\u8bd5\u6b21\u6570\u9650\u5236\u53ea\u5bf9\u90e8\u5206\u6d4b\u9a8c\u6709\u6548\uff0c\u6574\u4e2a\u6d4b\u9a8c\u7684\u5c1d\u8bd5\u6b21\u6570\u9650\u5236\u5728\u201c\u9009\u9879\u201d\u4e0b\u8bbe\u7f6e\u3002
+item.session.control.show.solution=\u663e\u793a\u7b54\u6848
+item.session.control.show.solution.hint=\u7b54\u6848\u4e5f\u5728\u6821\u5bf9\u65f6\u663e\u793a
+max.score=\u6700\u9ad8\u5206\u6570
+min.score=\u6700\u4f4e\u5206\u6570
 minute.short=m
-new.answer=\u65B0\u7B54\u6848
+new.answer=\u65b0\u7b54\u6848
 new.circle=\u5706
-new.drawing=\u753B\u56FE
-new.elements=\u589E\u52A0\u5143\u7D20
-new.essay=\u5C0F\u8BBA\u6587
-new.fib=\u7A7A\u683C\u6587\u672C
-new.fib.numerical=\u6570\u503C\u8F93\u5165
+new.drawing=\u753b\u56fe
+new.elements=\u589e\u52a0\u5143\u7d20
+new.essay=\u5c0f\u8bba\u6587
+new.fib=\u7a7a\u683c\u6587\u672c
+new.fib.numerical=\u6570\u503c\u8f93\u5165
 new.hotspot=Hotspot
 new.kprim=Kprim
-new.match=\u914D\u5BF9
-new.mc=\u591A\u9009\u9898
+new.match=\u914d\u5bf9
+new.mc=\u591a\u9009\u9898
 new.numerical=$\:new.fib.numerical
-new.rectangle=\u77E9\u5F62
+new.rectangle=\u77e9\u5f62
 new.sc=\u5355\u9009\u9898
 new.section=\u8282
-new.spots=\u589E\u52A0\u70ED\u70B9
-new.testpart=\u6D4B\u8BD5\u90E8\u5206
-new.upload=\u4E0A\u4F20\u6587\u4EF6
-preview=\u9884\u89C8
-preview.solution=\u9884\u89C8\u7B54\u6848
-time.limit.max=\u65F6\u95F4\u9650\u5236
+new.spots=\u589e\u52a0\u70ed\u70b9
+new.testpart=\u6d4b\u8bd5\u90e8\u5206
+new.upload=\u4e0a\u4f20\u6587\u4ef6
+preview=\u9884\u89c8
+preview.solution=\u9884\u89c8\u7b54\u6848
+time.limit.max=\u65f6\u95f4\u9650\u5236
 title.add=$org.olat.ims.qti.editor\:title.add
 tools.change.copy=$org.olat.ims.qti.editor\:tools.change.copy
 tools.change.delete=$org.olat.ims.qti.editor\:tools.change.delete
@@ -149,11 +153,11 @@ tools.export.header=$org.olat.ims.qti.editor\:tools.export.header
 tools.export.qpool=$org.olat.ims.qti.editor\:tools.export.qpool
 tools.import.qpool=$org.olat.ims.qti.editor\:tools.import.qpool
 tools.import.table=$org.olat.ims.qti.editor\:tools.import.table
-tools.reload.from.files=\u91CD\u65B0\u52A0\u8F7D\u6587\u4EF6\uFF0C\u5237\u65B0\u7F13\u5B58
-tools.reload.from.files.tooltip=\u53EA\u6709\u7BA1\u7406\u5458\u53EF\u89C1
-warning.alien.assessment.item=OpenOLAT\u7F16\u8F91\u5668\u4E0D\u80FD\u5904\u7406\u8FD9\u79CD\u7C7B\u578B\u7684\u95EE\u9898
-warning.alien.assessment.test=OpenOLAT\u7F16\u8F91\u5668\u4E0D\u80FD\u5904\u7406\u8FD9\u4E2A\u6D4B\u9A8C\u3002
-warning.atleastonesection=\u672C\u8282\u4E0D\u80FD\u88AB\u5220\u9664\uFF0C\u6D4B\u9A8C\u6216\u6D4B\u9A8C\u90E8\u5206\u5FC5\u987B\u81F3\u5C11\u5305\u542B\u4E00\u4E2A\u8282\u3002
-warning.feedback.cutvalue=\u53CD\u9988\u662F\u57FA\u4E8E\u5206\u6570\u7EBF\u7684\uFF0C\u5FC5\u987B\u9996\u5148\u5B9A\u4E49\u5206\u6570\u7EBF\u3002
-warning.in.use=\u8D44\u6E90\u5DF2\u7528\u4E8E\u8BC4\u4F30\uFF0C\u9650\u5236\u7F16\u8F91\u3002
-warning.item.session.control.attempts=\u8FD9\u4E2A\u9650\u5236\u5BF9\u6BCF\u4E2A\u95EE\u9898\u7684\u5C1D\u8BD5\u6B21\u6570\u6709\u5F71\u54CD\u3002.<br/>\u8BF7\u518D\u68C0\u67E5\u95EE\u9898\u7684\u8BBE\u7F6E\u3002
+tools.reload.from.files=\u91cd\u65b0\u52a0\u8f7d\u6587\u4ef6\uff0c\u5237\u65b0\u7f13\u5b58
+tools.reload.from.files.tooltip=\u53ea\u6709\u7ba1\u7406\u5458\u53ef\u89c1
+warning.alien.assessment.item=OpenOLAT\u7f16\u8f91\u5668\u4e0d\u80fd\u5904\u7406\u8fd9\u79cd\u7c7b\u578b\u7684\u95ee\u9898
+warning.alien.assessment.test=OpenOLAT\u7f16\u8f91\u5668\u4e0d\u80fd\u5904\u7406\u8fd9\u4e2a\u6d4b\u9a8c\u3002
+warning.atleastonesection=\u672c\u8282\u4e0d\u80fd\u88ab\u5220\u9664\uff0c\u6d4b\u9a8c\u6216\u6d4b\u9a8c\u90e8\u5206\u5fc5\u987b\u81f3\u5c11\u5305\u542b\u4e00\u4e2a\u8282\u3002
+warning.feedback.cutvalue=\u53cd\u9988\u662f\u57fa\u4e8e\u5206\u6570\u7ebf\u7684\uff0c\u5fc5\u987b\u9996\u5148\u5b9a\u4e49\u5206\u6570\u7ebf\u3002
+warning.in.use=\u8d44\u6e90\u5df2\u7528\u4e8e\u8bc4\u4f30\uff0c\u9650\u5236\u7f16\u8f91\u3002
+warning.item.session.control.attempts=\u8fd9\u4e2a\u9650\u5236\u5bf9\u6bcf\u4e2a\u95ee\u9898\u7684\u5c1d\u8bd5\u6b21\u6570\u6709\u5f71\u54cd\u3002.<br/>\u8bf7\u518d\u68c0\u67e5\u95ee\u9898\u7684\u8bbe\u7f6e\u3002
