--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
@@ -1,4 +1,36 @@
 #Sun Mar 19 10:15:41 CET 2017
+
+cif.dates.public=\u5b66\u671f
+table.header.lifecycle.label=\u5b66\u671f
+cif.public.dates=\u5b66\u671f
+cif.private.dates=\u65e5\u671f
+cif.date.start=\u5f00\u59cb
+cif.date.end=\u7ed3\u675f
+rentry.access.guest=\u65e0\u9700\u767b\u5f55\u8bbf\u95ee
+rentry.access.guest.on=\u5141\u8bb8\u53d7\u9080\u8005
+
+
+
+
+cif.licensor=\u8ba4\u53ef\u8bc1\u9881\u53d1\u8005
+cif.freetext=\u8bb8\u53ef\u534f\u8bae\u6587\u672c
+cif.license.text=\u8bb8\u53ef\u534f\u8bae\u6587\u672c
+
+rentry.leave.never=\u4ece\u4e0d
+rentry.leave.atanytime=\u968f\u65f6
+rentry.leave.afterenddate=\u8bfe\u7a0b\u7ed3\u675f\u65e5\u671f\u540e
+
+
+details.personal=\u6211\u7684\u6570\u636e
+details.bookmark.label=\u4e66\u7b7e
+details.overview=\u7efc\u8ff0
+table.header.deletedby=\u5220\u9664\u8005
+table.header.deletiondate=\u5220\u9664\u65e5\u671f
+cif.status.trash=\u5783\u573e
+table.status.trash=$\:cif.status.trash
+
+
+
 lifecycle.validTo=\u7ed3\u675f\u65e5\u671f$\:cif.date.end
 table.header.lifecycle.end=\u7ed3\u675f\u65e5\u671f$\:cif.date.end
 details.delete.soft.desc=\u4f7f\u7528\u6b64\u65b9\u6cd5\u5c06\u5b66\u4e60\u8d44\u6e90\u6807\u8bb0\u4e3a\u5df2\u5220\u9664\u3002
@@ -6,6 +38,32 @@ details.delete.soft.desc.1=\u7528\u6237\u6570\u636e\u5c06\u4ece\u8bfe\u7a0b\u4e2
 details.delete.soft.desc.2=\u53ea\u6709\u8bfe\u7a0b\u6240\u6709\u8005\u624d\u80fd\u8bbf\u95ee\u8be5\u8bfe\u7a0b\u3002
 details.delete.soft.desc.3=\u8bfe\u7a0b\u53ef\u4ee5\u5728\u201c\u5df2\u5220\u9664\u201d\u9009\u9879\u5361\u4e2d\u627e\u5230\u3002
 details.delete.alt=\u5220\u9664 {0}
+access.info.role.guests=\u6e38\u5ba2
+table.header.guests=\u6e38\u5ba2
+cif.guests=\u6e38\u5ba2
+table.guests= $\:cif.guests
+table.header.references=\u53c2\u8003
+
+BinderTemplate=Portfolio 2.0\u6a21\u677f
+FileResource.IMSQTI21=\u6d4b\u8bd5  (QTI 2.1)
+details.orders=\u9884\u5b9a
+
+
+
+
+FileResource.FORM= \u8c03\u67e5 Survey
+FileResource.SURVEY= \u8c03\u67e5\u95ee\u5377 Questionnaire
+search.survey= \u8c03\u67e5\u95ee\u5377  Questionnaires
+tools.add.survey= \u8c03\u67e5\u95ee\u5377  Questionnaire
+tools.new.createsurvey= \u8c03\u67e5\u95ee\u5377  Questionnaire
+
+
+FileResource.FORM=Fragebogen
+FileResource.SURVEY=Fragebogen
+search.survey=Fragebogen
+tools.add.survey=Fragebogen
+tools.new.createsurvey=Fragebogen
+
 
 
 cif.externalref=\u53c2\u8003
@@ -24,11 +82,16 @@ cif.dates.none=\u65e0
 cif.dates.private=\u6709\u5f00\u59cb\u7ed3\u675f\u65f6\u95f4
 cif.dates.public=\u5b66\u671f
 cif.location=\u4f4d\u7f6e
+table.header.location=$\:cif.location
 cif.organisations=\u7ec4\u7ec7
 rentry.access.type=\u7ec4\u7ec7\u6210\u5458\u7684\u8bbf\u95ee\u6743\u9650
 rentry.access.type.private.explain=\u884c\u653f\u7ba1\u7406\u4f1a\u5458
 rentry.access.type.booking.explain=\u6309\u7528\u6237\u9700\u8981\u9884\u8ba2
 rentry.access.type.shared.explain=\u6ca1\u6709\u9884\u8ba2
+
+table.header.lecture.infos=\u62a5\u544a
+
+
 
 rentry.access.type.explain=\u8bbf\u95ee\u81ea\u52a8\u5141\u8bb8\u4e0e\u72b6\u6001"$\:cif.status.published" \u6216\u8005 "$\:cif.status.closed"
 rentry.leave.option=\u4f1a\u5458\u53ef\u81ea\u884c\u9000\u8ba2
@@ -41,6 +104,7 @@ rentry.access.author.explain=\u72b6\u6001 "$\:cif.status.review", "$\:cif.status
 change.to.delete=\u5220\u9664
 
 search.catalog=\u76ee\u5f55
+details.catalog.title=$\:details.catalog
 no.catalog.entries=\u6b64\u8d44\u6e90\u5c1a\u672a\u6dfb\u52a0\u5230\u76ee\u5f55\u4e2d\u3002\r\n\r\n\u4f7f\u7528\u4e0a\u9762\u5de5\u5177\u680f\u4e2d\u7684\u201c\u6dfb\u52a0\u5230\u76ee\u5f55\u201d\u6309\u94ae\u5c06\u8d44\u6e90\u6dfb\u52a0\u5230\u76ee\u5f55\u4e2d\u7684\u7279\u5b9a\u7ea7\u522b\u3002\u76ee\u5f55\u5141\u8bb8\u7528\u6237\u6839\u636e\u8d44\u6e90\u8bbf\u95ee\u914d\u7f6e\u6d4f\u89c8\u53ef\u7528\u8d44\u6e90\u3002\u60a8\u53ef\u4ee5\u5c06\u8d44\u6e90\u6dfb\u52a0\u5230\u591a\u4e2a\u76ee\u5f55\u7ea7\u522b\u3002
 details.catalog=\u76ee\u5f55
 
@@ -63,7 +127,8 @@ details.options=\u9009\u9879
 details.access=\u5165\u53e3
 table.header.ac=\u5165\u53e3
 rentry.access.title=\u8bbf\u95ee\u548c\u9884\u5b9a\u914d\u7f6e
-
+table.status.preparation=$\:cif.status.preparation
+table.status.published=$\:cif.status.published
 
 
 
@@ -71,6 +136,7 @@ rentry.access.title=\u8bbf\u95ee\u548c\u9884\u5b9a\u914d\u7f6e
 details.info.title=\u4fe1\u606f
 details.info=\u8d44\u6599
 details.metadata=\u5143\u6570\u636e
+details.metadata.title=$\:details.metadata
 details.execution=\u6267\u884c
 details.execution.title=\u6267\u884c\u914d\u7f6e
 
@@ -112,6 +178,7 @@ contact.to.owner=\u5168\u4f53\u8bfe\u7a0b\u6240\u6709\u8005
 cif.owned.resources.usage.all=\u5168\u90e8
 cif.resources.status.all=\u5168\u90e8
 status.opened=\u53ef\u7528
+table.status.closed=$\:status.closed
 change.to.close=\u5df2\u7ed3\u675f
 search.courses.closed=\u5df2\u7ed3\u675f
 status.closed=\u5df2\u7ed3\u675f
@@ -444,7 +511,7 @@ tab.public=\u901a\u7528
 tab.quota.edit=\u5b9a\u989d
 tab.sharedfolder=\u8d44\u6e90\u6587\u4ef6\u5939
 table.filter=\u8fc7\u6ee4
-table.header.ac=AC
+table.header.ac=\u8bbf\u95ee Access
 table.header.access=\u53ef\u8bbf\u95ee\u72b6\u6001*
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.author=\u521b\u5efa\u8005
