--- a/src/main/java/org/olat/resource/accesscontrol/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/resource/accesscontrol/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,22 +1,30 @@
 #Tue Sep 16 03:08:22 CEST 2014
-order.menu.title=\u9884\u8BA2
-order.nr=\u9884\u8BA2\u53F7
-order.part.payment=\u9884\u8BA2\u65B9\u5F0F
-order.status=\u72B6\u6001
-order.status.canceled=\u4E2D\u65AD
-order.status.error=\u9519\u8BEF
-order.status.new=\u65B0\u7684
-order.status.payed=\u5DF2\u652F\u4ED8
-order.status.prepayment=\u6B63\u5728\u652F\u4ED8
-order.summary=\u5185\u5BB9
-order.to=\u7ED9
-order.total=\u603B\u8BA1
-orders.admin.my=\u9884\u8BA2\u8D44\u6E90
-orders.admin.my.desc=\u8D44\u6E90\u5DF2\u88AB\u4EE5\u4E0B\u7528\u6237\u9884\u8BA2\u3002\u8BF7\u60A8\u9009\u62E9\u9884\u8BA2\u4EE5\u5C55\u793A\u66F4\u591A\u5177\u4F53\u4FE1\u606F\u3002
-orders.my=\u6211\u7684\u9884\u8BA2
-orders.my.desc=\u4EE5\u4E0B\u60A8\u770B\u5230\u7684\u662F\u60A8\u9884\u8BA2\u7684\u6240\u6709\u8D44\u6E90\u3002\u8BF7\u60A8\u9009\u62E9\u9884\u8BA2\u4EE5\u5C55\u793A\u66F4\u591A\u5177\u4F53\u4FE1\u606F\u3002
-table.order.details=\u9009\u62E9
-table.order.empty=\u76EE\u524D\u60A8\u6CA1\u6709\u4EFB\u4F55\u9884\u8BA2\u3002
-to=\u5230\uFF1A
-transaction.date=\u5EFA\u7ACB\u4E8E
-transaction.details.title=\u8F6C\u8D26\u8BF4\u660E
+ac.methods.label=\u9884\u8ba2\u65b9\u6cd5
+
+accesscontrol.no.methods.full.access=\u6ca1\u6709\u9884\u5b9a\u65b9\u6cd5\u7528\u4e8e\u9650\u5236\u8bbf\u95ee\uff0c\u6240\u6709\u5df2\u77e5\u7528\u6237\u90fd\u53ef\u4ee5\u8bbf\u95ee\u6b64\u8d44\u6e90\uff0c\u800c\u65e0\u9700\u663e\u5f0f\u9884\u8ba2\u3002\u9009\u62e9\u6309\u94ae "$\:add.accesscontrol" \u6765 \u8bbf\u95ee\u63a7\u5236\u6765\u9650\u5236\u8bbf\u95ee\u6216\u8981\u6c42\u663e\u5f0f\u9884\u8ba2\u3002
+accesscontrol.no.methods.no.access=\u6ca1\u6709\u914d\u7f6e\u4efb\u4f55\u9884\u8ba2\u65b9\u6cd5\u3002\u6b64\u8d44\u6e90\u53ea\u80fd\u7531\u6b64\u8d44\u6e90\u7684\u663e\u5f0f\u6210\u5458\u8bbf\u95ee\u3002\u9009\u62e9\u6309\u94ae "$\:add.accesscontrol" \u3002\u4ee5\u6dfb\u52a0\u9884\u8ba2\u65b9\u6cd5\u5e76\u53d1\u5e03\u8d44\u6e90\u3002
+add.accesscontrol=\u6dfb\u52a0\u9884\u8ba2\u65b9\u6cd5
+accesscontrol.token=\u63a5\u5165\u7801
+
+
+order.menu.title=\u9884\u8ba2
+order.nr=\u9884\u8ba2\u53f7
+order.part.payment=\u9884\u8ba2\u65b9\u5f0f
+order.status=\u72b6\u6001
+order.status.canceled=\u4e2d\u65ad
+order.status.error=\u9519\u8bef
+order.status.new=\u65b0\u7684
+order.status.payed=\u5df2\u652f\u4ed8
+order.status.prepayment=\u6b63\u5728\u652f\u4ed8
+order.summary=\u5185\u5bb9
+order.to=\u7ed9
+order.total=\u603b\u8ba1
+orders.admin.my=\u9884\u8ba2\u8d44\u6e90
+orders.admin.my.desc=\u8d44\u6e90\u5df2\u88ab\u4ee5\u4e0b\u7528\u6237\u9884\u8ba2\u3002\u8bf7\u60a8\u9009\u62e9\u9884\u8ba2\u4ee5\u5c55\u793a\u66f4\u591a\u5177\u4f53\u4fe1\u606f\u3002
+orders.my=\u6211\u7684\u9884\u8ba2
+orders.my.desc=\u4ee5\u4e0b\u60a8\u770b\u5230\u7684\u662f\u60a8\u9884\u8ba2\u7684\u6240\u6709\u8d44\u6e90\u3002\u8bf7\u60a8\u9009\u62e9\u9884\u8ba2\u4ee5\u5c55\u793a\u66f4\u591a\u5177\u4f53\u4fe1\u606f\u3002
+table.order.details=\u9009\u62e9
+table.order.empty=\u76ee\u524d\u60a8\u6ca1\u6709\u4efb\u4f55\u9884\u8ba2\u3002
+to=\u5230\uff1a
+transaction.date=\u5efa\u7acb\u4e8e
+transaction.details.title=\u8f6c\u8d26\u8bf4\u660e
