--- a/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_zh_CN.properties
@@ -1,133 +1,138 @@
 #Tue Aug 17 15:45:12 CEST 2010
-cal.add.event=\u6DFB\u52A0\u4E8B\u4EF6
-cal.add.readonly=(\u53EA\u8BFB)
-cal.color.choose=\u9009\u62E9\u989C\u8272
-cal.color.title=\u9009\u62E9\u989C\u8272
-cal.copy.rootnode=\u6709\u6548\u65E5\u7A0B
-cal.copy.submit=\u590D\u5236\u4E8B\u4EF6
-cal.copy.title=\u5C06\u8BE5\u4E8B\u4EF6\u590D\u5236\u5230\u591A\u4E2A\u65E5\u7A0B\u4E2D
-cal.delete.dialogtext=\u4F60\u662F\u5426\u8981\u5220\u9664\u8BE5\u4E8B\u4EF6?
-cal.delete.dialogtext.sequence=\u60A8\u771F\u7684\u8981\u5220\u9664\u8FD9\u4E00\u7CFB\u5217\u4E8B\u4EF6\uFF1F
-cal.delete.no=\u53D6\u6D88
-cal.delete.yes=\u5220\u9664\u4E8B\u4EF6
-cal.disable=\u9690\u85CF\u8BE5\u65E5\u7A0B\u6761\u76EE
-cal.edit.back=\u8FD4\u56DE
-cal.edit.delete=\u5220\u9664\u8BE5\u6761\u76EE
-cal.edit.dialog.delete.sequence=\u5220\u9664\u7CFB\u5217\u4E8B\u4EF6
-cal.edit.dialog.delete.single=\u5220\u9664\u5355\u4E00\u4E8B\u4EF6
-cal.edit.dialog.sequence=\u7F16\u8F91\u7CFB\u5217\u4E8B\u4EF6
-cal.edit.dialog.text=\u8FD9\u662F\u4E00\u7CFB\u5217\u4E8B\u4EF6\u7684\u5C40\u90E8\u3002\u4E0B\u9762\u7684\u9009\u9879\u7531\u60A8\u6765\u652F\u914D\uFF1A
-cal.edit.dialog.title=\u5FAA\u73AF\u4E8B\u4EF6
-cal.enable=\u663E\u793A\u8BE5\u65E5\u7A0B\u6761\u76EE
-cal.error.eventDeleted=\u9009\u8FC7\u7684\u4E8B\u4EF6\u5DF2\u88AB\u5176\u4ED6\u7528\u6237\u5220\u9664.
-cal.error.save=\u4FDD\u5B58\u65F6\u53D1\u751F\u4E00\u4E2A\u9519\u8BEF. \u65E0\u6CD5\u4FDD\u5B58\u4F60\u7684\u4E8B\u4EF6.
-cal.eventdetails.hidden=(\u9690\u85CF)
+cal.form.date=\u65e5\u671f
+cal.form.begin=\u5f00\u59cb
+cal.form.end=\u7ed3\u675f
+
+
+cal.add.event=\u6dfb\u52a0\u4e8b\u4ef6
+cal.add.readonly=(\u53ea\u8bfb)
+cal.color.choose=\u9009\u62e9\u989c\u8272
+cal.color.title=\u9009\u62e9\u989c\u8272
+cal.copy.rootnode=\u6709\u6548\u65e5\u7a0b
+cal.copy.submit=\u590d\u5236\u4e8b\u4ef6
+cal.copy.title=\u5c06\u8be5\u4e8b\u4ef6\u590d\u5236\u5230\u591a\u4e2a\u65e5\u7a0b\u4e2d
+cal.delete.dialogtext=\u4f60\u662f\u5426\u8981\u5220\u9664\u8be5\u4e8b\u4ef6?
+cal.delete.dialogtext.sequence=\u60a8\u771f\u7684\u8981\u5220\u9664\u8fd9\u4e00\u7cfb\u5217\u4e8b\u4ef6\uff1f
+cal.delete.no=\u53d6\u6d88
+cal.delete.yes=\u5220\u9664\u4e8b\u4ef6
+cal.disable=\u9690\u85cf\u8be5\u65e5\u7a0b\u6761\u76ee
+cal.edit.back=\u8fd4\u56de
+cal.edit.delete=\u5220\u9664\u8be5\u6761\u76ee
+cal.edit.dialog.delete.sequence=\u5220\u9664\u7cfb\u5217\u4e8b\u4ef6
+cal.edit.dialog.delete.single=\u5220\u9664\u5355\u4e00\u4e8b\u4ef6
+cal.edit.dialog.sequence=\u7f16\u8f91\u7cfb\u5217\u4e8b\u4ef6
+cal.edit.dialog.text=\u8fd9\u662f\u4e00\u7cfb\u5217\u4e8b\u4ef6\u7684\u5c40\u90e8\u3002\u4e0b\u9762\u7684\u9009\u9879\u7531\u60a8\u6765\u652f\u914d\uff1a
+cal.edit.dialog.title=\u5faa\u73af\u4e8b\u4ef6
+cal.enable=\u663e\u793a\u8be5\u65e5\u7a0b\u6761\u76ee
+cal.error.eventDeleted=\u9009\u8fc7\u7684\u4e8b\u4ef6\u5df2\u88ab\u5176\u4ed6\u7528\u6237\u5220\u9664.
+cal.error.save=\u4fdd\u5b58\u65f6\u53d1\u751f\u4e00\u4e2a\u9519\u8bef. \u65e0\u6cd5\u4fdd\u5b58\u4f60\u7684\u4e8b\u4ef6.
+cal.eventdetails.hidden=(\u9690\u85cf)
 cal.form.allday=\u5168\u5929
-cal.form.begin=\u5F00\u59CB
-cal.form.calendarname=\u65E5\u5386
-cal.form.cancel=\u53D6\u6D88
-cal.form.chooseCalendar=\u65E5\u5386
-cal.form.class=\u53EF\u89C1\u6027
-cal.form.class.freebusy=\u65F6\u95F4\u53EF\u89C1
-cal.form.class.private=\u79C1\u6709
-cal.form.class.public=\u516C\u5F00
-cal.form.date=\u65E5\u671F
-cal.form.end=\u7ED3\u675F
-cal.form.error.date=\u65E5\u671F/\u4E8B\u4EF6\u683C\u5F0F\u6709\u8BEF
-cal.form.error.endbeforebegin=\u65E5\u671F/\u65F6\u95F4\u7ED3\u675F\u4E4B\u524D\u5F00\u59CB
-cal.form.error.mandatory=\u8FD9\u4E2A\u533A\u57DF\u88AB\u6258\u7BA1\u7684
-cal.form.error.recurendbeforeend=\u6B64\u5FAA\u73AF\u4E8B\u4EF6\u7684\u53D1\u751F\u7684\u622A\u6B62\u65F6\u95F4\u8981\u65E9\u4E8E\u622A\u6B62\u65F6\u95F4\u672C\u8EAB\u3002
-cal.form.location=\u5730\u70B9
-cal.form.location.hidden=(\u9690\u85CF\u4E8B\u4EF6\u8BE6\u60C5)
-cal.form.recurrence=\u5FAA\u73AF\u65B9\u5F0F
+cal.form.begin=\u5f00\u59cb
+cal.form.calendarname=\u65e5\u5386
+cal.form.cancel=\u53d6\u6d88
+cal.form.chooseCalendar=\u65e5\u5386
+cal.form.class=\u53ef\u89c1\u6027
+cal.form.class.freebusy=\u65f6\u95f4\u53ef\u89c1
+cal.form.class.private=\u79c1\u6709
+cal.form.class.public=\u516c\u5f00
+cal.form.date=\u65e5\u671f
+cal.form.end=\u7ed3\u675f
+cal.form.error.date=\u65e5\u671f/\u4e8b\u4ef6\u683c\u5f0f\u6709\u8bef
+cal.form.error.endbeforebegin=\u65e5\u671f/\u65f6\u95f4\u7ed3\u675f\u4e4b\u524d\u5f00\u59cb
+cal.form.error.mandatory=\u8fd9\u4e2a\u533a\u57df\u88ab\u6258\u7ba1\u7684
+cal.form.error.recurendbeforeend=\u6b64\u5faa\u73af\u4e8b\u4ef6\u7684\u53d1\u751f\u7684\u622a\u6b62\u65f6\u95f4\u8981\u65e9\u4e8e\u622a\u6b62\u65f6\u95f4\u672c\u8eab\u3002
+cal.form.location=\u5730\u70b9
+cal.form.location.hidden=(\u9690\u85cf\u4e8b\u4ef6\u8be6\u60c5)
+cal.form.recurrence=\u5faa\u73af\u65b9\u5f0f
 cal.form.recurrence.biweekly=\u9694\u5468
-cal.form.recurrence.daily=\u6BCF\u5929
-cal.form.recurrence.end=\u7ED3\u675F\u4E8E
+cal.form.recurrence.daily=\u6bcf\u5929
+cal.form.recurrence.end=\u7ed3\u675f\u4e8e
 cal.form.recurrence.end.example=01.12.2099
-cal.form.recurrence.monthly=\u6BCF\u6708
-cal.form.recurrence.none=\u65E0
-cal.form.recurrence.weekly=\u6BCF\u5468
-cal.form.recurrence.workdaily=\u5468\u4E00 - \u5468\u4E94
-cal.form.recurrence.yearly=\u6BCF\u5E74
-cal.form.subject=\u4E3B\u9898
-cal.form.subject.hidden=(\u9690\u85CF\u4E8B\u4EF6\u8BE6\u60C5)
-cal.form.submitMulti=\u4FDD\u5B58\u5E76\u590D\u5236
-cal.form.submitSingle=\u4FDD\u5B58
-cal.form.title=\u65E5\u7A0B\u8BE6\u60C5
-cal.fri=\u661F\u671F\u4E94
-cal.goto.event=\u8F6C\u5230\u5DF2\u9009\u62E9\u7684\u65E5\u7A0B
-cal.icalfeed.info=\u8BF7\u4ECE\u5176\u4ED6\u7684\u5E94\u7528\u7A0B\u5E8F\u4E2D\u4F7F\u7528\u4EE5\u4E0BURL\u6765\u8BBF\u95EE\u60A8\u65E5\u5386\u3002\u60A8\u53EF\u4EE5\u590D\u5236\u5E76\u7C98\u8D34\u6B64\u5730\u5740\u5230\u4EFB\u4F55\u5176\u4ED6\u652F\u6301iCal\u683C\u5F0F\u7684\u5E94\u7528\u7A0B\u5E8F\u3002
-cal.icalfeed.regenerate.info=\u5DF2\u91CD\u65B0\u751F\u6210ICal\u53CD\u9988\u94FE\u63A5\u3002
-cal.icalfeed.regenerate.title=\u91CD\u65B0\u4EA7\u751FICal\u53CD\u9988\u94FE\u63A5
-cal.icalfeed.regenerate.warning=\u8BA2\u9605\u6B64ICal\u53CD\u9988\u7684\u91CD\u65B0\u4EA7\u751F\u4FE1\u606F\u4F1A\u53D8\u6210\u65E0\u6548\u7684\u3002\u60A8\u786E\u5B9A\u8981\u7EE7\u7EED\uFF1F
-cal.icalfeed.remove.confirmation_message=\u60A8\u786E\u5B9A\u8981\u4F7F\u8BA2\u9605\u6B64ICal\u53CD\u9988\u7684\u6240\u6709\u4FE1\u606F\u65E0\u6548\uFF1F
-cal.icalfeed.remove.info=ICal\u53CD\u9988\u5DF2\u88AB\u79FB\u9664
-cal.icalfeed.remove.title=\u786E\u8BA4\u79FB\u9664
-cal.icalfeed.subscribe=\u6062\u590DICal\u53CD\u9988
-cal.icalfeed.subscribe.remove=\u5220\u9664ICal\u53CD\u9988\u94FE\u63A5
-cal.icalfeed.title=ICal\u53CD\u9988\u94FE\u63A5
-cal.import.calname.empty.error=\u65E5\u5386\u540D\u79F0\u4E0D\u80FD\u7A7A\u7F3A
-cal.import.calname.exists.error=\u4EE5\u6B64\u547D\u540D\u7684\u65E5\u5386\u65E9\u5DF2\u5B58\u5728
-cal.import.calname.prompt=\u8BF7\u7ED9\u8BE5\u5BFC\u5165\u7684\u65E5\u5386\u8D77\u4E2A\u540D\u5B57
-cal.import.calname.submit=\u5BFC\u5165
-cal.import.calname.title=\u5BFC\u5165\u65E5\u5386
-cal.import.form.failed=\u672C\u533A\u57DF\u8F6C\u6362\u53D1\u751F\u9519\u8BEF
-cal.import.form.format.error=\u672C\u6587\u4EF6\u7684\u683C\u5F0F\u4E0D\u80FD\u4F5C\u4E3A\u65E5\u5386\u4E0A\u4F20
-cal.import.form.limit.error=\u65E5\u5386\u6587\u4EF6\u4E0D\u80FD\u8D85\u8FC7 {0} bytes
-cal.import.form.prompt=\u8BF7\u9009\u62E9\u4E00\u4E2A\u65E5\u5386\u6587\u4EF6(.iCal\u683C\u5F0F)
-cal.import.form.submit=\u5BFC\u5165\u65E5\u5386
-cal.import.list=\u5DF2\u5BFC\u5165\u65E5\u5386\u7684\u5217\u8868
-cal.import.parsing.failed=\u6B64\u5BFC\u5165\u7684\u65E5\u5386\u65E0\u6548\u3002
-cal.import.remove=\u79FB\u9664\u5DF2\u5BFC\u5165\u7684\u65E5\u5386
-cal.import.remove.confirmation_message=\u60A8\u786E\u5B9A\u8981\u79FB\u9664\u6B64\u5DF2\u5BFC\u5165\u7684\u65E5\u5386\uFF1F
-cal.import.remove.info=\u65E5\u5386\u79FB\u9664\u6210\u529F\uFF01
-cal.import.remove.title=\u786E\u8BA4\u79FB\u9664
-cal.import.success=\u5BFC\u5165\u6210\u529F
-cal.import.title=\u5BFC\u5165\u65E5\u5386
-cal.import.type.file=\u5BFC\u5165\u6587\u4EF6
-cal.synchronize.type.url=\u4ECEURL\u5730\u5740\u5BFC\u5165
-cal.import.url.content.invalid=\u65E5\u5386\u6587\u4EF6\u683C\u5F0F\u4E0D\u6B63\u786E\u3002\u8BF7\u68C0\u67E5URL\u5730\u5740\u3002
-cal.import.url.empty.error=\u65E5\u5386\u7684URL\u5730\u5740\u4E0D\u80FD\u4E3A\u7A7A
-cal.import.url.file.write.error=\u6570\u636E\u4E0D\u80FD\u88AB\u5199\u5165\u65E5\u5386\u6587\u4EF6\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5\u3002
-cal.import.url.invalid=\u4E0B\u8F7D\u5931\u8D25\uFF0C\u8BF7\u68C0\u67E5URL\u5730\u5740\u3002
-cal.import.url.prompt=\u516C\u5171\u65E5\u5386\u5730\u5740\uFF08\u7535\u5B50\u65E5\u5386\u683C\u5F0F\u7684\u5730\u5740\uFF09\uFF1A
-cal.links.noprovider=\u6CA1\u6709\u6709\u6548\u94FE\u63A5
-cal.links.submit=\u4FDD\u5B58
-cal.links.title=\u94FE\u63A5
-cal.list=\u65E5\u7A0B\u5217\u8868
-cal.managecalendars=\u5BFC\u5165\u5E76\u7BA1\u7406\u65E5\u5386
-cal.mon=\u661F\u671F\u4E00
-cal.nextweek=\u4E0B\u4E00\u5468 &gt;&gt;
-cal.notifications.entry={2}\u4E8E{1}\u4FEE\u6539\u9879\u76EE"{0}"
-cal.notifications.header=\u5728\u60A8\u7684\u8BA2\u9605\u7684\u65E5\u5386\u4E2D\u6709\u65B0\u7684\u53D8\u52A8\uFF1A
-cal.notifications.header.course=\u5728\u5B66\u7A0B"{0}"\u4E2D\u7684\u65E5\u5386
-cal.notifications.header.group=\u5728\u7FA4\u7EC4"{0}"\u4E2D\u7684\u65E5\u5386
+cal.form.recurrence.monthly=\u6bcf\u6708
+cal.form.recurrence.none=\u65e0
+cal.form.recurrence.weekly=\u6bcf\u5468
+cal.form.recurrence.workdaily=\u5468\u4e00 - \u5468\u4e94
+cal.form.recurrence.yearly=\u6bcf\u5e74
+cal.form.subject=\u4e3b\u9898
+cal.form.subject.hidden=(\u9690\u85cf\u4e8b\u4ef6\u8be6\u60c5)
+cal.form.submitMulti=\u4fdd\u5b58\u5e76\u590d\u5236
+cal.form.submitSingle=\u4fdd\u5b58
+cal.form.title=\u65e5\u7a0b\u8be6\u60c5
+cal.fri=\u661f\u671f\u4e94
+cal.goto.event=\u8f6c\u5230\u5df2\u9009\u62e9\u7684\u65e5\u7a0b
+cal.icalfeed.info=\u8bf7\u4ece\u5176\u4ed6\u7684\u5e94\u7528\u7a0b\u5e8f\u4e2d\u4f7f\u7528\u4ee5\u4e0bURL\u6765\u8bbf\u95ee\u60a8\u65e5\u5386\u3002\u60a8\u53ef\u4ee5\u590d\u5236\u5e76\u7c98\u8d34\u6b64\u5730\u5740\u5230\u4efb\u4f55\u5176\u4ed6\u652f\u6301iCal\u683c\u5f0f\u7684\u5e94\u7528\u7a0b\u5e8f\u3002
+cal.icalfeed.regenerate.info=\u5df2\u91cd\u65b0\u751f\u6210ICal\u53cd\u9988\u94fe\u63a5\u3002
+cal.icalfeed.regenerate.title=\u91cd\u65b0\u4ea7\u751fICal\u53cd\u9988\u94fe\u63a5
+cal.icalfeed.regenerate.warning=\u8ba2\u9605\u6b64ICal\u53cd\u9988\u7684\u91cd\u65b0\u4ea7\u751f\u4fe1\u606f\u4f1a\u53d8\u6210\u65e0\u6548\u7684\u3002\u60a8\u786e\u5b9a\u8981\u7ee7\u7eed\uff1f
+cal.icalfeed.remove.confirmation_message=\u60a8\u786e\u5b9a\u8981\u4f7f\u8ba2\u9605\u6b64ICal\u53cd\u9988\u7684\u6240\u6709\u4fe1\u606f\u65e0\u6548\uff1f
+cal.icalfeed.remove.info=ICal\u53cd\u9988\u5df2\u88ab\u79fb\u9664
+cal.icalfeed.remove.title=\u786e\u8ba4\u79fb\u9664
+cal.icalfeed.subscribe=\u6062\u590dICal\u53cd\u9988
+cal.icalfeed.subscribe.remove=\u5220\u9664ICal\u53cd\u9988\u94fe\u63a5
+cal.icalfeed.title=ICal\u53cd\u9988\u94fe\u63a5
+cal.import.calname.empty.error=\u65e5\u5386\u540d\u79f0\u4e0d\u80fd\u7a7a\u7f3a
+cal.import.calname.exists.error=\u4ee5\u6b64\u547d\u540d\u7684\u65e5\u5386\u65e9\u5df2\u5b58\u5728
+cal.import.calname.prompt=\u8bf7\u7ed9\u8be5\u5bfc\u5165\u7684\u65e5\u5386\u8d77\u4e2a\u540d\u5b57
+cal.import.calname.submit=\u5bfc\u5165
+cal.import.calname.title=\u5bfc\u5165\u65e5\u5386
+cal.import.form.failed=\u672c\u533a\u57df\u8f6c\u6362\u53d1\u751f\u9519\u8bef
+cal.import.form.format.error=\u672c\u6587\u4ef6\u7684\u683c\u5f0f\u4e0d\u80fd\u4f5c\u4e3a\u65e5\u5386\u4e0a\u4f20
+cal.import.form.limit.error=\u65e5\u5386\u6587\u4ef6\u4e0d\u80fd\u8d85\u8fc7 {0} bytes
+cal.import.form.prompt=\u8bf7\u9009\u62e9\u4e00\u4e2a\u65e5\u5386\u6587\u4ef6(.iCal\u683c\u5f0f)
+cal.import.form.submit=\u5bfc\u5165\u65e5\u5386
+cal.import.list=\u5df2\u5bfc\u5165\u65e5\u5386\u7684\u5217\u8868
+cal.import.parsing.failed=\u6b64\u5bfc\u5165\u7684\u65e5\u5386\u65e0\u6548\u3002
+cal.import.remove=\u79fb\u9664\u5df2\u5bfc\u5165\u7684\u65e5\u5386
+cal.import.remove.confirmation_message=\u60a8\u786e\u5b9a\u8981\u79fb\u9664\u6b64\u5df2\u5bfc\u5165\u7684\u65e5\u5386\uff1f
+cal.import.remove.info=\u65e5\u5386\u79fb\u9664\u6210\u529f\uff01
+cal.import.remove.title=\u786e\u8ba4\u79fb\u9664
+cal.import.success=\u5bfc\u5165\u6210\u529f
+cal.import.title=\u5bfc\u5165\u65e5\u5386
+cal.import.type.file=\u5bfc\u5165\u6587\u4ef6
+cal.synchronize.type.url=\u4eceURL\u5730\u5740\u5bfc\u5165
+cal.import.url.content.invalid=\u65e5\u5386\u6587\u4ef6\u683c\u5f0f\u4e0d\u6b63\u786e\u3002\u8bf7\u68c0\u67e5URL\u5730\u5740\u3002
+cal.import.url.empty.error=\u65e5\u5386\u7684URL\u5730\u5740\u4e0d\u80fd\u4e3a\u7a7a
+cal.import.url.file.write.error=\u6570\u636e\u4e0d\u80fd\u88ab\u5199\u5165\u65e5\u5386\u6587\u4ef6\uff0c\u8bf7\u7a0d\u540e\u518d\u8bd5\u3002
+cal.import.url.invalid=\u4e0b\u8f7d\u5931\u8d25\uff0c\u8bf7\u68c0\u67e5URL\u5730\u5740\u3002
+cal.import.url.prompt=\u516c\u5171\u65e5\u5386\u5730\u5740\uff08\u7535\u5b50\u65e5\u5386\u683c\u5f0f\u7684\u5730\u5740\uff09\uff1a
+cal.links.noprovider=\u6ca1\u6709\u6709\u6548\u94fe\u63a5
+cal.links.submit=\u4fdd\u5b58
+cal.links.title=\u94fe\u63a5
+cal.list=\u65e5\u7a0b\u5217\u8868
+cal.managecalendars=\u5bfc\u5165\u5e76\u7ba1\u7406\u65e5\u5386
+cal.mon=\u661f\u671f\u4e00
+cal.nextweek=\u4e0b\u4e00\u5468 &gt;&gt;
+cal.notifications.entry={2}\u4e8e{1}\u4fee\u6539\u9879\u76ee"{0}"
+cal.notifications.header=\u5728\u60a8\u7684\u8ba2\u9605\u7684\u65e5\u5386\u4e2d\u6709\u65b0\u7684\u53d8\u52a8\uff1a
+cal.notifications.header.course=\u5728\u5b66\u7a0b"{0}"\u4e2d\u7684\u65e5\u5386
+cal.notifications.header.group=\u5728\u7fa4\u7ec4"{0}"\u4e2d\u7684\u65e5\u5386
 cal.notifications.location=\u5728{0}
-cal.previousweek=&lt;&lt; \u4E0A\u4E00\u5468
-cal.sat=\u661F\u671F\u516D
-cal.search.beginPeriod=\u4ECE\uFF08\u65E5\uFF09
-cal.search.button=\u641C\u7D22\u4E8B\u4EF6
-cal.search.cancel=\u53D6\u6D88
-cal.search.delete=\u5220\u9664\u5DF2\u9009\u4E8B\u4EF6
-cal.search.endPeriod=\u5230\uFF08\u65E5\uFF09
-cal.search.errorNoParams=\u8BF7\u81F3\u5C11\u586B\u5199\u4E00\u9879\u641C\u7D20\u4FE1\u606F
-cal.search.errorPeriodOverlap=\u5F00\u59CB\u6216\u7ED3\u675F\u65E0\u6548\u65E5\u671F\u3002
-cal.search.gotodate.button=\u8BBF\u95EE\u65E5\u5386
-cal.search.location=\u5730\u70B9
-cal.search.noMatches=\u65E0\u641C\u7D22\u7ED3\u679C
-cal.search.results=\u7ED3\u679C
-cal.search.subject=\u4E3B\u9898
-cal.search.submit=\u641C\u7D22
-cal.search.title=\u641C\u7D22\u4E8B\u4EF6
-cal.subscribe=\u6DFB\u52A0\u5230\u4E2A\u4EBA\u65E5\u5386\u4E2D
-cal.sun=\u661F\u671F\u65E5
-cal.thisweek=\u4ECA\u5929
-cal.thu=\u661F\u671F\u56DB
-cal.tue=\u661F\u671F\u4E8C
-cal.unsubscribe=\u4ECE\u4E2A\u4EBA\u65E5\u5386\u4E2D\u79FB\u9664
-cal.until=\u76F4\u5230
-cal.wed=\u661F\u671F\u4E09
-cal.week.label=\u5B66\u671F\u5468
+cal.previousweek=&lt;&lt; \u4e0a\u4e00\u5468
+cal.sat=\u661f\u671f\u516d
+cal.search.beginPeriod=\u4ece\uff08\u65e5\uff09
+cal.search.button=\u641c\u7d22\u4e8b\u4ef6
+cal.search.cancel=\u53d6\u6d88
+cal.search.delete=\u5220\u9664\u5df2\u9009\u4e8b\u4ef6
+cal.search.endPeriod=\u5230\uff08\u65e5\uff09
+cal.search.errorNoParams=\u8bf7\u81f3\u5c11\u586b\u5199\u4e00\u9879\u641c\u7d20\u4fe1\u606f
+cal.search.errorPeriodOverlap=\u5f00\u59cb\u6216\u7ed3\u675f\u65e0\u6548\u65e5\u671f\u3002
+cal.search.gotodate.button=\u8bbf\u95ee\u65e5\u5386
+cal.search.location=\u5730\u70b9
+cal.search.noMatches=\u65e0\u641c\u7d22\u7ed3\u679c
+cal.search.results=\u7ed3\u679c
+cal.search.subject=\u4e3b\u9898
+cal.search.submit=\u641c\u7d22
+cal.search.title=\u641c\u7d22\u4e8b\u4ef6
+cal.subscribe=\u6dfb\u52a0\u5230\u4e2a\u4eba\u65e5\u5386\u4e2d
+cal.sun=\u661f\u671f\u65e5
+cal.thisweek=\u4eca\u5929
+cal.thu=\u661f\u671f\u56db
+cal.tue=\u661f\u671f\u4e8c
+cal.unsubscribe=\u4ece\u4e2a\u4eba\u65e5\u5386\u4e2d\u79fb\u9664
+cal.until=\u76f4\u5230
+cal.wed=\u661f\u671f\u4e09
+cal.week.label=\u5b66\u671f\u5468
 checkall=\u5168\u9009
 
 
@@ -190,8 +195,8 @@ month.short.mar=3\u6708
 month.short.nov=11\u6708
 month.short.oct=10\u6708
 month.short.sep=9\u6708
-error.goto.date=\u9519\u8BEF\u7684\u65E5\u671F\u683C\u5F0F(dd.mm.yy)
+error.goto.date=\u9519\u8bef\u7684\u65e5\u671f\u683c\u5f0f(dd.mm.yy)
 
-tab.event=\u4E8B\u4EF6\u8BE6\u60C5
-tab.links=\u94FE\u63A5
-uncheckall=\u5168\u90E8\u53D6\u6D88
+tab.event=\u4e8b\u4ef6\u8be6\u60c5
+tab.links=\u94fe\u63a5
+uncheckall=\u5168\u90e8\u53d6\u6d88
