--- a/src/main/java/org/olat/core/commons/modules/bc/meta/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/core/commons/modules/bc/meta/_i18n/LocalStrings_zh_CN.properties
@@ -1,47 +1,51 @@
 #Sun Oct 09 05:15:28 CEST 2016
+mf.licensor=\u8ba4\u53ef\u8bc1\u9881\u53d1\u8005
+mf.freetext=\u8bb8\u53ef\u534f\u8bae\u6587\u672c
+
+
 cfile.name.notvalid=$org.olat.core.commons.modules.bc\:cfile.name.notvalid
-external.url=\u94FE\u63A5\u5230\u672C\u8D44\u6E90\u7684\u5916\u90E8\u94FE\u63A5
-file.name.notvalid=\u8BF7\u7FFB\u8BD1\uFF01\u6587\u4EF6\u540D\u4E0D\u5408\u6CD5\uFF0C\u8BF7\u5220\u9664\u6389\u4E0D\u5408\u6CD5\u7684\u5B57\u7B26\uFF01\u4E0D\u5408\u6CD5\u7684\u5B57\u7B26\u5305\u62EC\uFF1A\u975E\u62C9\u4E01\u5B57\u6BCD-1\uFF0C_,\:,\u7B49\u7B49
-folder.name.notvalid=\u6587\u4EF6\u5939\u540D\u79F0\u5305\u542B\u65E0\u6548\u5B57\u7B26\u3002\u8BF7\u79FB\u9664\u6240\u6709\u7279\u6B8A\u5B57\u7B26\uFF0C\u4F8B\u5982/\uFF0C\:\u7B49
-mf.author=\u7531\u521B\u5EFA
-mf.cancel=\u53D6\u6D88
-mf.city=\u4F4D\u7F6E
-mf.comment=\u63CF\u8FF0
-mf.creator=\u521B\u5EFA\u8005
-mf.downloads=\u88AB\u6D4F\u89C8\u6B21\u6570
-mf.error.empty=\u8FD9\u4E2A\u6587\u4EF6\u65F6\u5F3A\u5236\u6027\u7684\u3002
-mf.error.filename.empty=\u5BF9\u8C61\u7684\u540D\u79F0\u662F\u5F3A\u5236\u6027\u7684\u3002
-mf.error.filename.exists=\u4EE5\u6B64\u547D\u540D\u7684\u5BF9\u8C61\u65E9\u5DF2\u5B58\u5728\u3002
-mf.error.filename.invalidchars=\u5BF9\u8C61\u7684\u540D\u79F0\u5305\u542B\u65E0\u6548\u7684\u5B57\u7B26\u3002
-mf.file=\u6587\u4EF6
-mf.filename=\u6587\u4EF6\u540D
-mf.filename.warning=<i class\="o_icon o_icon_warn"> </i> \u8FD9\u4E2A\u6587\u4EF6\u5305\u542B\u4E86\u88AB\u79FB\u9664\u7684\u65E0\u6548\u5B57\u7B26\u3002
-mf.header=\u5143\u6570\u636E\u6587\u4EF6/\u6587\u4EF6\u5939
-mf.language=\u8BED\u8A00
-mf.lastModified=\u6700\u540E\u4E00\u6B21\u4FEE\u6539
-mf.locked=\u5DF2\u9501\u5B9A
+external.url=\u94fe\u63a5\u5230\u672c\u8d44\u6e90\u7684\u5916\u90e8\u94fe\u63a5
+file.name.notvalid=\u8bf7\u7ffb\u8bd1\uff01\u6587\u4ef6\u540d\u4e0d\u5408\u6cd5\uff0c\u8bf7\u5220\u9664\u6389\u4e0d\u5408\u6cd5\u7684\u5b57\u7b26\uff01\u4e0d\u5408\u6cd5\u7684\u5b57\u7b26\u5305\u62ec\uff1a\u975e\u62c9\u4e01\u5b57\u6bcd-1\uff0c_,\:,\u7b49\u7b49
+folder.name.notvalid=\u6587\u4ef6\u5939\u540d\u79f0\u5305\u542b\u65e0\u6548\u5b57\u7b26\u3002\u8bf7\u79fb\u9664\u6240\u6709\u7279\u6b8a\u5b57\u7b26\uff0c\u4f8b\u5982/\uff0c\:\u7b49
+mf.author=\u7531\u521b\u5efa
+mf.cancel=\u53d6\u6d88
+mf.city=\u4f4d\u7f6e
+mf.comment=\u63cf\u8ff0
+mf.creator=\u521b\u5efa\u8005
+mf.downloads=\u88ab\u6d4f\u89c8\u6b21\u6570
+mf.error.empty=\u8fd9\u4e2a\u6587\u4ef6\u65f6\u5f3a\u5236\u6027\u7684\u3002
+mf.error.filename.empty=\u5bf9\u8c61\u7684\u540d\u79f0\u662f\u5f3a\u5236\u6027\u7684\u3002
+mf.error.filename.exists=\u4ee5\u6b64\u547d\u540d\u7684\u5bf9\u8c61\u65e9\u5df2\u5b58\u5728\u3002
+mf.error.filename.invalidchars=\u5bf9\u8c61\u7684\u540d\u79f0\u5305\u542b\u65e0\u6548\u7684\u5b57\u7b26\u3002
+mf.file=\u6587\u4ef6
+mf.filename=\u6587\u4ef6\u540d
+mf.filename.warning=<i class\="o_icon o_icon_warn"> </i> \u8fd9\u4e2a\u6587\u4ef6\u5305\u542b\u4e86\u88ab\u79fb\u9664\u7684\u65e0\u6548\u5b57\u7b26\u3002
+mf.header=\u5143\u6570\u636e\u6587\u4ef6/\u6587\u4ef6\u5939
+mf.language=\u8bed\u8a00
+mf.lastModified=\u6700\u540e\u4e00\u6b21\u4fee\u6539
+mf.locked=\u5df2\u9501\u5b9a
 mf.locked.description={0} on {1}
-mf.locked.help=\u5982\u679C\u5176\u4ED6\u7528\u6237\u4E0D\u80FD\u91CD\u5199\uFF0C\u5220\u9664\u6216\u79FB\u52A8\u6587\u4EF6\uFF0C\u5C31\u4E3A\u6587\u4EF6\u52A0\u9501
-mf.lockedBy=\u9501\u5B9A\u8005
-mf.metadata.title=\u5143\u6570\u636E
+mf.locked.help=\u5982\u679c\u5176\u4ed6\u7528\u6237\u4e0d\u80fd\u91cd\u5199\uff0c\u5220\u9664\u6216\u79fb\u52a8\u6587\u4ef6\uff0c\u5c31\u4e3a\u6587\u4ef6\u52a0\u9501
+mf.lockedBy=\u9501\u5b9a\u8005
+mf.metadata.title=\u5143\u6570\u636e
 mf.month=mm
-mf.more.meta.link=\u63D2\u5165\u9644\u5C5E\u7684\u5143\u6570\u636E
-mf.no.file=\u8BF7\u60A8\u9009\u62E9\u4E00\u4E2A\u6587\u4EF6
+mf.more.meta.link=\u63d2\u5165\u9644\u5c5e\u7684\u5143\u6570\u636e
+mf.no.file=\u8bf7\u60a8\u9009\u62e9\u4e00\u4e2a\u6587\u4ef6
 mf.pages=\u9875\u7801
-mf.publishDate=\u53D1\u5E03\u65E5\u671F
-mf.publisher=\u53D1\u5E03\u8005
-mf.quota.title=\u60A8\u6587\u4EF6\u5939\u4E2D\u7684\u68C0\u7D22\u4FE1\u606F
-mf.show.extended.metadata=\u663E\u793A\u9644\u52A0\u7684\u5143\u6570\u636E
-mf.size=\u5927\u5C0F
-mf.source=\u8D44\u6E90
-mf.submit=\u4FDD\u5B58\u4FEE\u6539
+mf.publishDate=\u53d1\u5e03\u65e5\u671f
+mf.publisher=\u53d1\u5e03\u8005
+mf.quota.title=\u60a8\u6587\u4ef6\u5939\u4e2d\u7684\u68c0\u7d22\u4fe1\u606f
+mf.show.extended.metadata=\u663e\u793a\u9644\u52a0\u7684\u5143\u6570\u636e
+mf.size=\u5927\u5c0f
+mf.source=\u8d44\u6e90
+mf.submit=\u4fdd\u5b58\u4fee\u6539
 mf.title=\u6807\u9898
-mf.type=\u7C7B\u578B
-mf.type.directory=\u6587\u4EF6\u5939
-mf.unlocked=\u5DF2\u89E3\u9501
-mf.unlocked.description=\u6B64\u523B\u6587\u4EF6\u672A\u88AB\u9501\u5B9A
-mf.upload.title=\u4E0A\u4F20\u6587\u4EF6
+mf.type=\u7c7b\u578b
+mf.type.directory=\u6587\u4ef6\u5939
+mf.unlocked=\u5df2\u89e3\u9501
+mf.unlocked.description=\u6b64\u523b\u6587\u4ef6\u672a\u88ab\u9501\u5b9a
+mf.upload.title=\u4e0a\u4f20\u6587\u4ef6
 mf.url=URL\u5730\u5740
-mf.wrong.month.value=\u65E0\u6548\u7684\u6708\u4EFD
-mf.wrong.year.value=\u65E0\u6548\u7684\u5E74\u4EFD
+mf.wrong.month.value=\u65e0\u6548\u7684\u6708\u4efd
+mf.wrong.year.value=\u65e0\u6548\u7684\u5e74\u4efd
 mf.year=yyyy
