--- a/src/main/java/org/olat/core/commons/modules/glossary/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/core/commons/modules/glossary/_i18n/LocalStrings_zh_CN.properties
@@ -1,40 +1,42 @@
 #Fri Dec 17 17:13:23 CET 2010
-cmd.add=\u65B0\u589E\u8BCD\u6761
+glossary.title = \u672f\u8bed
+
+cmd.add=\u65b0\u589e\u8bcd\u6761
 cmd.delete=\u5220\u9664
-cmd.edit=\u7F16\u8F91
-definition.saved=$\:definition.title\u5DF2\u4FDD\u5B58\u3002
-definition.title=\u5B9A\u4E49
-flexions.answer.error=\u5F62\u6001\u670D\u52A1\u4EA7\u751F\u4E86\u4E00\u4E2A\u65E0\u6548\u7684\u7ED3\u679C\u6216\u9519\u8BEF\u3002\u8BF7\u4E0E\u60A8\u7684\u63D0\u4F9B\u8005\u8054\u7CFB\u3002
-flexions.error=\u6CA1\u6709\u53D1\u73B0\u5C48\u66F2\u6216\u5F62\u6001\u670D\u52A1\u4E0D\u53EF\u7528\u3002
-flexions.get.button=\u67E5\u8BE2\u5C48\u66F2
-flexions.guessed=\u8BF7\u60A8\u6CE8\u610F\uFF1A\u6CA1\u80FD\u5728\u5B57\u5178\u4E2D\u627E\u5230\u663E\u793A\u7684\u5C48\u66F2\u3002\u5B83\u53EF\u80FD\u901A\u8FC7\u4E0D\u592A\u51C6\u786E\u7684\u63A2\u7A76\u5F0F\u5C48\u66F2\u4EA7\u751F\u3002
-flexions.impossible.without.term=\u5728\u5236\u5B9A\u53CD\u9988\u6027\u95EE\u9898\u4E4B\u524D\uFF0C\u60A8\u8981\u5148\u586B\u5199$\:glossary.form.glossaryKey.
-flexions.intro=\u8BF7\u60A8\u9009\u62E9\u8981\u4F7F\u7528\u7684\u53CD\u9988\u4FE1\u606F\u3002
-flexions.intro.ms=\u901A\u8FC7<i>$\:flexions.get.button</i>\u8FD9\u79CD\u65B9\u5F0F\uFF0C\u60A8\u80FD\u591F\u5236\u4F5C\u5F62\u6001\u670D\u52A1\u7684\u53CD\u9988\u95EE\u9898\u3002
-flexions.select.all=\u5168\u90E8\u9009\u62E9
-flexions.select.none=\u65E0\u4EFB\u4F55\u9009\u62E9
-flexions.title=\u5C48\u66F2
-flexions.to.save=\u9009\u62E9 flections
-flexions.warn.after.changed.term=\u4FDD\u5B58\u5C48\u66F2(flexion)\u540E\uFF0C\u60A8\u4FEE\u6539\u4E86\u4E00\u4E2A\u540D\u8BCD\uFF0C\u8BF7\u91CD\u65B0\u68C0\u67E5\u6709\u6548\u6027
-flexions.zero.found=\u6CA1\u6709\u4FDD\u5B58\u7684flexion
-form.submit=\u4FDD\u5B58
-glossary.add.title=\u672F\u8BED\u8868\: \u7F16\u8F91\u672F\u8BED
-glossary.delete.dialog=\u4F60\u786E\u5B9A\u8981\u5220\u9664 <b>{0}</b>\u5417?
-glossary.edit.title=\u672F\u8BED\u8868\: \u6DFB\u52A0\u672F\u8BED
-glossary.empty=\u8BE5\u672F\u8BED\u8868\u4E2D\u6CA1\u6709\u5185\u5BB9
-glossary.form.error.containsKeyAlready=\u8BE5\u540D\u8BCD\u89E3\u91CA\u5DF2\u7ECF\u5B58\u5728
-glossary.form.error.keyToShort=\u8BE5\u540D\u8BCD\u4E0D\u80FD\u53EA\u5305\u542B\u4E00\u4E2A\u5B57\u7B26
-glossary.form.error.notEmpty=\u8BE5\u533A\u57DF\u4E0D\u8BB8\u4E3A\u7A7A
-glossary.form.glossaryKey=\u672F\u8BED
-glossary.list.filter=\u7528\u5982\u4E0B\u6761\u4EF6\u83B7\u53D6\u5217\u8868\uFF1A
-glossary.list.showall=\u663E\u793A\u6240\u6709\u8BCD\u6C47
-glossary.locked=\u7528\u6237<b>{0}</b>\u6B64\u523B\u6B63\u5728\u7F16\u8F91\u8BE5\u672F\u8BED\u8868. \u8BE5\u529F\u80FD\u76EE\u524D\u60A8\u65E0\u6CD5\u4F7F\u7528.
-glossary.term.synonym=\u540C\u4E49\u8BCD
-glossary.title=\u672F\u8BED\u8868
-synonym.add=\u589E\u52A0\uFF0C\u4FEE\u6539\u6216\u5220\u9664
-synonym.button=\u4FDD\u5B58
+cmd.edit=\u7f16\u8f91
+definition.saved=$\:definition.title\u5df2\u4fdd\u5b58\u3002
+definition.title=\u5b9a\u4e49
+flexions.answer.error=\u5f62\u6001\u670d\u52a1\u4ea7\u751f\u4e86\u4e00\u4e2a\u65e0\u6548\u7684\u7ed3\u679c\u6216\u9519\u8bef\u3002\u8bf7\u4e0e\u60a8\u7684\u63d0\u4f9b\u8005\u8054\u7cfb\u3002
+flexions.error=\u6ca1\u6709\u53d1\u73b0\u5c48\u66f2\u6216\u5f62\u6001\u670d\u52a1\u4e0d\u53ef\u7528\u3002
+flexions.get.button=\u67e5\u8be2\u5c48\u66f2
+flexions.guessed=\u8bf7\u60a8\u6ce8\u610f\uff1a\u6ca1\u80fd\u5728\u5b57\u5178\u4e2d\u627e\u5230\u663e\u793a\u7684\u5c48\u66f2\u3002\u5b83\u53ef\u80fd\u901a\u8fc7\u4e0d\u592a\u51c6\u786e\u7684\u63a2\u7a76\u5f0f\u5c48\u66f2\u4ea7\u751f\u3002
+flexions.impossible.without.term=\u5728\u5236\u5b9a\u53cd\u9988\u6027\u95ee\u9898\u4e4b\u524d\uff0c\u60a8\u8981\u5148\u586b\u5199$\:glossary.form.glossaryKey.
+flexions.intro=\u8bf7\u60a8\u9009\u62e9\u8981\u4f7f\u7528\u7684\u53cd\u9988\u4fe1\u606f\u3002
+flexions.intro.ms=\u901a\u8fc7<i>$\:flexions.get.button</i>\u8fd9\u79cd\u65b9\u5f0f\uff0c\u60a8\u80fd\u591f\u5236\u4f5c\u5f62\u6001\u670d\u52a1\u7684\u53cd\u9988\u95ee\u9898\u3002
+flexions.select.all=\u5168\u90e8\u9009\u62e9
+flexions.select.none=\u65e0\u4efb\u4f55\u9009\u62e9
+flexions.title=\u5c48\u66f2
+flexions.to.save=\u9009\u62e9 flections
+flexions.warn.after.changed.term=\u4fdd\u5b58\u5c48\u66f2(flexion)\u540e\uff0c\u60a8\u4fee\u6539\u4e86\u4e00\u4e2a\u540d\u8bcd\uff0c\u8bf7\u91cd\u65b0\u68c0\u67e5\u6709\u6548\u6027
+flexions.zero.found=\u6ca1\u6709\u4fdd\u5b58\u7684flexion
+form.submit=\u4fdd\u5b58
+glossary.add.title=\u672f\u8bed\u8868\: \u7f16\u8f91\u672f\u8bed
+glossary.delete.dialog=\u4f60\u786e\u5b9a\u8981\u5220\u9664 <b>{0}</b>\u5417?
+glossary.edit.title=\u672f\u8bed\u8868\: \u6dfb\u52a0\u672f\u8bed
+glossary.empty=\u8be5\u672f\u8bed\u8868\u4e2d\u6ca1\u6709\u5185\u5bb9
+glossary.form.error.containsKeyAlready=\u8be5\u540d\u8bcd\u89e3\u91ca\u5df2\u7ecf\u5b58\u5728
+glossary.form.error.keyToShort=\u8be5\u540d\u8bcd\u4e0d\u80fd\u53ea\u5305\u542b\u4e00\u4e2a\u5b57\u7b26
+glossary.form.error.notEmpty=\u8be5\u533a\u57df\u4e0d\u8bb8\u4e3a\u7a7a
+glossary.form.glossaryKey=\u672f\u8bed
+glossary.list.filter=\u7528\u5982\u4e0b\u6761\u4ef6\u83b7\u53d6\u5217\u8868\uff1a
+glossary.list.showall=\u663e\u793a\u6240\u6709\u8bcd\u6c47
+glossary.locked=\u7528\u6237<b>{0}</b>\u6b64\u523b\u6b63\u5728\u7f16\u8f91\u8be5\u672f\u8bed\u8868. \u8be5\u529f\u80fd\u76ee\u524d\u60a8\u65e0\u6cd5\u4f7f\u7528.
+glossary.term.synonym=\u540c\u4e49\u8bcd
+glossary.title=\u672f\u8bed\u8868
+synonym.add=\u589e\u52a0\uff0c\u4fee\u6539\u6216\u5220\u9664
+synonym.button=\u4fdd\u5b58
 synonym.link.delete=-
-term.and.synonyms.intro=\u60A8\u53EF\u4EE5\u5728\u8F93\u5165\u6846\u4E2D\u6DFB\u52A0\u4E00\u4E2A\u65B0\u540C\u4E49\u8BCD\u3002 \u901A\u8FC7$\:synonym.link.delete\u5220\u9664\u4E0D\u6070\u5F53\u7684\u540C\u4E49\u8BCD\u3002
-term.and.synonyms.title=\u8BCD\u548C\u540C\u4E49\u8BCD
-term.error.alreadyused=\u672C\u8BCD\u6761\uFF0C\u540C\u4E49\u8BCD\u6216\u91CA\u4E49\u65E9\u5DF2\u4E8E\u672F\u8BED\u8BCD\u6C47\u8868\u4E2D\u5B58\u5728\u3002\u8BF7\u8C03\u6574\u672C\u8BCD\u6761\u6216\u5B83\u7684\u62F7\u8D1D"{0}"\uFF01
-warning.contains.dublicates=\u5728\u672F\u8BED\u8BCD\u6C47\u8868\u4E2D\uFF0C\u4E0B\u9762\u7684\u8BCD\u6761\u88AB\u591A\u6B21\u5B9A\u4E49\:{0}.\u6BCF\u6B21\u53EA\u80FD\u663E\u793A\u4E00\u4E2A\u8BCD\u6761\uFF1B\u8BF7\u60A8\u5220\u9664\u591A\u4F59\u7684\u8BCD\u6761\!
+term.and.synonyms.intro=\u60a8\u53ef\u4ee5\u5728\u8f93\u5165\u6846\u4e2d\u6dfb\u52a0\u4e00\u4e2a\u65b0\u540c\u4e49\u8bcd\u3002 \u901a\u8fc7$\:synonym.link.delete\u5220\u9664\u4e0d\u6070\u5f53\u7684\u540c\u4e49\u8bcd\u3002
+term.and.synonyms.title=\u8bcd\u548c\u540c\u4e49\u8bcd
+term.error.alreadyused=\u672c\u8bcd\u6761\uff0c\u540c\u4e49\u8bcd\u6216\u91ca\u4e49\u65e9\u5df2\u4e8e\u672f\u8bed\u8bcd\u6c47\u8868\u4e2d\u5b58\u5728\u3002\u8bf7\u8c03\u6574\u672c\u8bcd\u6761\u6216\u5b83\u7684\u62f7\u8d1d"{0}"\uff01
+warning.contains.dublicates=\u5728\u672f\u8bed\u8bcd\u6c47\u8868\u4e2d\uff0c\u4e0b\u9762\u7684\u8bcd\u6761\u88ab\u591a\u6b21\u5b9a\u4e49\:{0}.\u6bcf\u6b21\u53ea\u80fd\u663e\u793a\u4e00\u4e2a\u8bcd\u6761\uff1b\u8bf7\u60a8\u5220\u9664\u591a\u4f59\u7684\u8bcd\u6761\!
