--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,148 +1,151 @@
 #Sun Oct 09 04:21:11 CEST 2016
+rights.licensor=\u8ba4\u53ef\u8bc1\u9881\u53d1\u8005
+rights.freetext=\u8bb8\u53ef\u534f\u8bae\u6587\u672c
+
 add=+
-add.to.list=\u589E\u52A0\u5230\u5217\u8868
-applications=\u5E94\u7528
-author.item=\u4F5C\u8005\u6743\u9650
-bulk.change=\u6539\u53D8\u5143\u6570\u636E
-bulk.change.description=\u8FD9\u91CC\u60A8\u53EF\u4EE51\u6B65\u66F4\u6539\u66F4\u591A\u95EE\u9898\u7684\u5C5E\u6027\u3002
-classification.taxonomy.level=\u4E13\u4E1A\u9886\u57DF
-classification.taxonomy.parents=\u8DEF\u5F84
-collection.creationDate=\u521B\u5EFA\u4E8E
-collection.name=\u540D\u79F0
-confirm.delete.source=\u60A8\u786E\u5B9A\u5220\u9664\u6B64\u8868\u5355\u5417\uFF1F
-confirm.unshare=\u60A8\u786E\u5B9A\u5220\u9664\u6B64\u95EE\u9898{0}\u5417\uFF1F
-copy=\u590D\u5236
-create.collection.description=\u8BF7\u60A8\u7ED9\u8868\u5355\u547D\u540D\u3002
-create.list=\u521B\u5EFA\u8868\u5355
-create.pool=\u521B\u5EFA\u6C60
-create.success=\u6210\u529F\u521B\u5EFA1\u4E2A\u95EE\u9898\u3002
-create.test=\u521B\u5EFA\u6D4B\u8BD5
+add.to.list=\u589e\u52a0\u5230\u5217\u8868
+applications=\u5e94\u7528
+author.item=\u4f5c\u8005\u6743\u9650
+bulk.change=\u6539\u53d8\u5143\u6570\u636e
+bulk.change.description=\u8fd9\u91cc\u60a8\u53ef\u4ee51\u6b65\u66f4\u6539\u66f4\u591a\u95ee\u9898\u7684\u5c5e\u6027\u3002
+classification.taxonomy.level=\u4e13\u4e1a\u9886\u57df
+classification.taxonomy.parents=\u8def\u5f84
+collection.creationDate=\u521b\u5efa\u4e8e
+collection.name=\u540d\u79f0
+confirm.delete.source=\u60a8\u786e\u5b9a\u5220\u9664\u6b64\u8868\u5355\u5417\uff1f
+confirm.unshare=\u60a8\u786e\u5b9a\u5220\u9664\u6b64\u95ee\u9898{0}\u5417\uff1f
+copy=\u590d\u5236
+create.collection.description=\u8bf7\u60a8\u7ed9\u8868\u5355\u547d\u540d\u3002
+create.list=\u521b\u5efa\u8868\u5355
+create.pool=\u521b\u5efa\u6c60
+create.success=\u6210\u529f\u521b\u5efa1\u4e2a\u95ee\u9898\u3002
+create.test=\u521b\u5efa\u6d4b\u8bd5
 delete.collection=\u5220\u9664\u8868\u5355
 delete.item=\u5220\u9664
-delete.pool=\u5220\u9664\u6C60
-delete.pool.confirm=\u60A8\u786E\u5B9A\u8981\u5220\u9664\u8FD9\u4E2A\u6C60{0}\u5417\uFF1F
-details=\u67E5\u770B\u7EC6\u8282
-edit.pool=\u7F16\u8F91\u6C60
-editable=\u7F16\u8F91\u680F
-educational.context=\u7EA7\u522B
-educational.learningTime=\u5E73\u5747\u5904\u7406\u65F6\u95F4
+delete.pool=\u5220\u9664\u6c60
+delete.pool.confirm=\u60a8\u786e\u5b9a\u8981\u5220\u9664\u8fd9\u4e2a\u6c60{0}\u5417\uff1f
+details=\u67e5\u770b\u7ec6\u8282
+edit.pool=\u7f16\u8f91\u6c60
+editable=\u7f16\u8f91\u680f
+educational.context=\u7ea7\u522b
+educational.learningTime=\u5e73\u5747\u5904\u7406\u65f6\u95f4
 educational.learningTime.day=d
 educational.learningTime.hour=h
 educational.learningTime.minute=m
 educational.learningTime.second=s
-error.input.toolong=\u60A8\u8F93\u5165\u7684\u6587\u672C\u592A\u957F\uFF08{0}\u4E2A\u5B57\u7B26\uFF09\u3002\u53EA\u5141\u8BB8\u8F93\u5165{1}\u4E2A\u5B57\u7B26
-error.select.one=\u5FC5\u987B\u81F3\u5C11\u9009\u62E9\u4E00\u4E2A\u95EE\u9898
-error.wrongFloat=\u9519\u8BEF\u7684\u6570\u5B57\u683C\u5F0F\uFF0C\u4F8B\u59821.0,0.5,0.2
-error.wrongInteger=\u9519\u8BEF\u7684\u6570\u5B57\u683C\u5F0F\uFF0C\u4F8B\u59821,12
-export.item=\u5BFC\u51FA
-general=\u4E00\u822C
-general.additional.informations=\u989D\u5916\u4FE1\u606F
+error.input.toolong=\u60a8\u8f93\u5165\u7684\u6587\u672c\u592a\u957f\uff08{0}\u4e2a\u5b57\u7b26\uff09\u3002\u53ea\u5141\u8bb8\u8f93\u5165{1}\u4e2a\u5b57\u7b26
+error.select.one=\u5fc5\u987b\u81f3\u5c11\u9009\u62e9\u4e00\u4e2a\u95ee\u9898
+error.wrongFloat=\u9519\u8bef\u7684\u6570\u5b57\u683c\u5f0f\uff0c\u4f8b\u59821.0,0.5,0.2
+error.wrongInteger=\u9519\u8bef\u7684\u6570\u5b57\u683c\u5f0f\uff0c\u4f8b\u59821,12
+export.item=\u5bfc\u51fa
+general=\u4e00\u822c
+general.additional.informations=\u989d\u5916\u4fe1\u606f
 general.additional.informations.long=$\:general.additional.informations
-general.coverage=\u8986\u76D6
-general.description=\u63CF\u8FF0
+general.coverage=\u8986\u76d6
+general.description=\u63cf\u8ff0
 general.identifier=ID
 general.key=DBkey
-general.keywords=\u5173\u952E\u8BCD
-general.language=\u8BED\u8A00
+general.keywords=\u5173\u952e\u8bcd
+general.language=\u8bed\u8a00
 general.master.identifier=Master ID
 general.topic=\u6807\u9898
-import.excellike.12=\u901A\u8FC7\u590D\u5236/\u7C98\u8D34\u5BFC\u5165excel QTI 1.2
-import.excellike.21=\u901A\u8FC7\u590D\u5236/\u7C98\u8D34\u5BFC\u5165excel QTI 2.1
-import.failed=\u95EE\u9898\u4E0D\u80FD\u5BFC\u5165\u3002
-import.file=\u5BFC\u5165\u6587\u4EF6
-import.item=\u5BFC\u5165
-import.repository=\u5BFC\u5165\u5B66\u4E60\u8D44\u6E90
-import.success={0}\u95EE\u9898\u6210\u529F\u5BFC\u5165\u3002
-inReview=\u6D4F\u89C8\u4E2D
-inWork=\u5904\u7406\u4E2D
-item.collectioned=\u6DFB\u52A0{0}\u95EE\u9898\u5230\u8868\u5355\u3002
-item.copied=\u590D\u5236{0}\u95EE\u9898\u3002
-item.deleted=\u5220\u9664\u95EE\u9898\u3002
-item.level=\u7EA7\u522B
-item.pooled={0}\u95EE\u9898\u6DFB\u52A0\u5230\u6C60\u4E2D\u3002
-item.shared=\u91CA\u653E{0}\u95EE\u9898\u3002
-item.type.essay=\u6587\u7AE0
+import.excellike.12=\u901a\u8fc7\u590d\u5236/\u7c98\u8d34\u5bfc\u5165excel QTI 1.2
+import.excellike.21=\u901a\u8fc7\u590d\u5236/\u7c98\u8d34\u5bfc\u5165excel QTI 2.1
+import.failed=\u95ee\u9898\u4e0d\u80fd\u5bfc\u5165\u3002
+import.file=\u5bfc\u5165\u6587\u4ef6
+import.item=\u5bfc\u5165
+import.repository=\u5bfc\u5165\u5b66\u4e60\u8d44\u6e90
+import.success={0}\u95ee\u9898\u6210\u529f\u5bfc\u5165\u3002
+inReview=\u6d4f\u89c8\u4e2d
+inWork=\u5904\u7406\u4e2d
+item.collectioned=\u6dfb\u52a0{0}\u95ee\u9898\u5230\u8868\u5355\u3002
+item.copied=\u590d\u5236{0}\u95ee\u9898\u3002
+item.deleted=\u5220\u9664\u95ee\u9898\u3002
+item.level=\u7ea7\u522b
+item.pooled={0}\u95ee\u9898\u6dfb\u52a0\u5230\u6c60\u4e2d\u3002
+item.shared=\u91ca\u653e{0}\u95ee\u9898\u3002
+item.type.essay=\u6587\u7ae0
 item.type.fib=Fill-in-Blank
 item.type.hotspot=Hotspot
 item.type.kprim=KPrim
-item.type.mc=\u591A\u9009
-item.type.numerical=\u6570\u503C\u8F93\u5165
+item.type.mc=\u591a\u9009
+item.type.numerical=\u6570\u503c\u8f93\u5165
 item.type.sc=\u5355\u9009
-item.type.unkown=\u672A\u77E5
-lifecycle.status=\u72B6\u6001
-lifecycle.status.draft=\u8349\u7A3F
-lifecycle.status.finalVersion=\u6700\u7EC8
-lifecycle.status.review=\u6D4F\u89C8
-lifecycle.status.revised=\u4FEE\u6539
-lifecycle.status.unavailable=\u4E0D\u53EF\u53CA
-lifecycle.version=\u7248\u672C
+item.type.unkown=\u672a\u77e5
+lifecycle.status=\u72b6\u6001
+lifecycle.status.draft=\u8349\u7a3f
+lifecycle.status.finalVersion=\u6700\u7ec8
+lifecycle.status.review=\u6d4f\u89c8
+lifecycle.status.revised=\u4fee\u6539
+lifecycle.status.unavailable=\u4e0d\u53ef\u53ca
+lifecycle.version=\u7248\u672c
 list=\u5236\u5355
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Favorit"> </i>
-menu.admin=\u7BA1\u7406
-menu.admin.alt=\u7BA1\u7406
-menu.admin.levels=\u7B49\u7EA7
-menu.admin.levels.alt=\u7EA7\u522B
-menu.admin.licenses=\u8BB8\u53EF\u8BC1
+menu.admin=\u7ba1\u7406
+menu.admin.alt=\u7ba1\u7406
+menu.admin.levels=\u7b49\u7ea7
+menu.admin.levels.alt=\u7ea7\u522b
+menu.admin.licenses=\u8bb8\u53ef\u8bc1
 menu.admin.licenses.alt=License
-menu.admin.pools=\u6C60\u7BA1\u7406
-menu.admin.studyfields=\u4E13\u4E1A\u9886\u57DF
-menu.admin.types=\u95EE\u9898\u7C7B\u578B
-menu.database.favorit=\u6211\u7684\u559C\u597D
-menu.database.favorit.alt=\u6211\u7684\u559C\u597D
-menu.database.my=\u6211\u7684\u95EE\u9898
-menu.database.my.alt=\u6211\u7684\u95EE\u9898
-menu.pools=\u6C60
-menu.pools.main=\u76EE\u5F55
-menu.share=\u91CA\u653E
-metadatas=\u5143\u6570\u636E
+menu.admin.pools=\u6c60\u7ba1\u7406
+menu.admin.studyfields=\u4e13\u4e1a\u9886\u57df
+menu.admin.types=\u95ee\u9898\u7c7b\u578b
+menu.database.favorit=\u6211\u7684\u559c\u597d
+menu.database.favorit.alt=\u6211\u7684\u559c\u597d
+menu.database.my=\u6211\u7684\u95ee\u9898
+menu.database.my.alt=\u6211\u7684\u95ee\u9898
+menu.pools=\u6c60
+menu.pools.main=\u76ee\u5f55
+menu.share=\u91ca\u653e
+metadatas=\u5143\u6570\u636e
 my.list=\u6211\u7684\u8868\u5355
-my.share=\u6211\u7684\u5206\u4EAB
-new.item=\u521B\u5EFA\u95EE\u9898
-next=\u4E0B\u4E00\u4E2A
+my.share=\u6211\u7684\u5206\u4eab
+new.item=\u521b\u5efa\u95ee\u9898
+next=\u4e0b\u4e00\u4e2a
 pool.key=ID
-pool.name=\u540D\u79F0
+pool.name=\u540d\u79f0
 pool.owners=\u6240\u6709\u8005
-pool.public=\u516C\u5F00\u7684
-presentation.title=\u95EE\u9898\u6C60
-previous=\u4E0A\u4E2A
-question=\u9879\u76EE\u5206\u6790
-question.assessmentType=\u6D4B\u8BD5\u65B9\u5F0F
-question.assessmentType.both=\u90FD
-question.assessmentType.formative=\u5F62\u5F0F\u7684
-question.assessmentType.summative=\u603B\u7ED3\u7684
-question.differentiation=\u9009\u62E9\u6027
-question.differentiation.example=-1.0\u52301.0\u4E4B\u95F4\u7684\u503C\uFF0C\u4F8B\u59820.1
-question.difficulty=\u9879\u76EE\u96BE\u5EA6
-question.difficulty.example=0.0\u52301.0\u4E4B\u95F4\u7684\u503C\uFF0C\u4F8B\u59820.3
-question.numOfAnswerAlternatives=\u5E72\u6270\u9879\u6570\u76EE
-question.stdevDifficulty=\u9879\u76EE\u96BE\u5EA6\u6807\u51C6\u5DEE
+pool.public=\u516c\u5f00\u7684
+presentation.title=\u95ee\u9898\u6c60
+previous=\u4e0a\u4e2a
+question=\u9879\u76ee\u5206\u6790
+question.assessmentType=\u6d4b\u8bd5\u65b9\u5f0f
+question.assessmentType.both=\u90fd
+question.assessmentType.formative=\u5f62\u5f0f\u7684
+question.assessmentType.summative=\u603b\u7ed3\u7684
+question.differentiation=\u9009\u62e9\u6027
+question.differentiation.example=-1.0\u52301.0\u4e4b\u95f4\u7684\u503c\uff0c\u4f8b\u59820.1
+question.difficulty=\u9879\u76ee\u96be\u5ea6
+question.difficulty.example=0.0\u52301.0\u4e4b\u95f4\u7684\u503c\uff0c\u4f8b\u59820.3
+question.numOfAnswerAlternatives=\u5e72\u6270\u9879\u6570\u76ee
+question.stdevDifficulty=\u9879\u76ee\u96be\u5ea6\u6807\u51c6\u5dee
 question.stdevDifficulty.example=$\:question.difficulty.example
-question.type=\u7C7B\u578B
-question.usage=\u6D4B\u8BD5\u4E2D\u5E94\u7528
+question.type=\u7c7b\u578b
+question.usage=\u6d4b\u8bd5\u4e2d\u5e94\u7528
 quickview=<i class\='o_icon o_icon_quickview'> </i>
-rating=\u8BC4\u4F30
+rating=\u8bc4\u4f30
 remove=-
-rename.collection=\u8868\u5355\u91CD\u547D\u540D
+rename.collection=\u8868\u5355\u91cd\u547d\u540d
 rights=\u6743\u9650
-root.taxonomyLevel=\u4E13\u4E1A\u9886\u57DF
-select.group=\u91CA\u653E
+root.taxonomyLevel=\u4e13\u4e1a\u9886\u57df
+select.group=\u91ca\u653e
 select.item=$\:details
-select.pool=\u91CA\u653E\u5230\u6C60\u4E2D
-share.editable=\u7F16\u8F91
-share.group=\u91CA\u653E\u5230\u7FA4\u7EC4\u4E2D
-share.item=\u91CA\u653E
-share.options=\u60A8\u5141\u8BB8\u5176\u4ED6\u4EBA\u7F16\u8F91\u8FD9\u4E2A\u95EE\u9898\u5417\uFF1F
-share.pool=\u91CA\u653E\u5230\u6C60\u4E2D
-shared=\u88AB\u91CA\u653E
-sharing.shares=\u7FA4\u7EC4
-technical=\u6280\u672F
-technical.creation=\u521B\u5EFA
-technical.editor=\u7F16\u8F91
-technical.editorVersion=\u7F16\u8F91\u7248\u672C
-technical.format=\u683C\u5F0F
-technical.lastModified=\u4E0A\u6B21\u66F4\u6539
-technics=\u6280\u672F
-topnav.qpool=\u95EE\u9898\u6C60
-topnav.qpool.alt=\u95EE\u9898\u6570\u636E\u5E93\u53CA\u95EE\u9898\u91CA\u653E
+select.pool=\u91ca\u653e\u5230\u6c60\u4e2d
+share.editable=\u7f16\u8f91
+share.group=\u91ca\u653e\u5230\u7fa4\u7ec4\u4e2d
+share.item=\u91ca\u653e
+share.options=\u60a8\u5141\u8bb8\u5176\u4ed6\u4eba\u7f16\u8f91\u8fd9\u4e2a\u95ee\u9898\u5417\uff1f
+share.pool=\u91ca\u653e\u5230\u6c60\u4e2d
+shared=\u88ab\u91ca\u653e
+sharing.shares=\u7fa4\u7ec4
+technical=\u6280\u672f
+technical.creation=\u521b\u5efa
+technical.editor=\u7f16\u8f91
+technical.editorVersion=\u7f16\u8f91\u7248\u672c
+technical.format=\u683c\u5f0f
+technical.lastModified=\u4e0a\u6b21\u66f4\u6539
+technics=\u6280\u672f
+topnav.qpool=\u95ee\u9898\u6c60
+topnav.qpool.alt=\u95ee\u9898\u6570\u636e\u5e93\u53ca\u95ee\u9898\u91ca\u653e
 unshare.item=\u5220\u9664
-used=\u4F7F\u7528
+used=\u4f7f\u7528
