--- a/src/main/java/org/olat/resource/accesscontrol/provider/free/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/resource/accesscontrol/provider/free/ui/_i18n/LocalStrings_de.properties
@@ -1,10 +1,11 @@
 #Mon Mar 02 09:54:04 CET 2009
-free.method=Frei verf\u00FCgbar
+free.method=Frei verf\u00fcgbar
+
 access.button=Buchen
 access.free.title=Freie Ressource 
-access.free.desc=Diese Ressource ist f\u00FCr Sie frei verf\u00FCgbar. W\u00E4hlen Sie die Schaltfl\u00e4che "$:access.button" um sich f\u00FCr den Zugang zu registrieren.
+access.free.desc=Diese Ressource ist f\u00fcr Sie frei verf\u00fcgbar. W\u00e4hlen Sie die Schaltfl\u00e4che "$:access.button" um sich f\u00fcr den Zugang zu registrieren.
 offer.description=$org.olat.resource.accesscontrol.ui\:offer.description
-free.method=Frei verf\u00FCgbar
+
 create=$org.olat.resource.accesscontrol.ui\:create
 auto.booking=Automatisches Buchen
-auto.booking.value=bei Kursaufruf Buchung automatisch ohne Buchungsdialog ausf\u00FChren.
+auto.booking.value=bei Kursaufruf Buchung automatisch ohne Buchungsdialog ausf\u00fchren.
